APIs/googleapis.com/content/v2/java-client/README.md
# openapi-java-client

Content API for Shopping
- API version: v2
  - Build date: 2024-10-12T11:51:02.825653-04:00[America/New_York]
  - Generator version: 7.9.0

Manage your product listings and accounts for Google Shopping

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AccountsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://shoppingcontent.googleapis.com/content/v2");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AccountsApi apiInstance = new AccountsApi(defaultClient);
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    try {
      AccountsAuthInfoResponse result = apiInstance.contentAccountsAuthinfo($xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AccountsApi#contentAccountsAuthinfo");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://shoppingcontent.googleapis.com/content/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**contentAccountsAuthinfo**](docs/AccountsApi.md#contentAccountsAuthinfo) | **GET** /accounts/authinfo | 
*AccountsApi* | [**contentAccountsClaimwebsite**](docs/AccountsApi.md#contentAccountsClaimwebsite) | **POST** /{merchantId}/accounts/{accountId}/claimwebsite | 
*AccountsApi* | [**contentAccountsCustombatch**](docs/AccountsApi.md#contentAccountsCustombatch) | **POST** /accounts/batch | 
*AccountsApi* | [**contentAccountsDelete**](docs/AccountsApi.md#contentAccountsDelete) | **DELETE** /{merchantId}/accounts/{accountId} | 
*AccountsApi* | [**contentAccountsGet**](docs/AccountsApi.md#contentAccountsGet) | **GET** /{merchantId}/accounts/{accountId} | 
*AccountsApi* | [**contentAccountsInsert**](docs/AccountsApi.md#contentAccountsInsert) | **POST** /{merchantId}/accounts | 
*AccountsApi* | [**contentAccountsLink**](docs/AccountsApi.md#contentAccountsLink) | **POST** /{merchantId}/accounts/{accountId}/link | 
*AccountsApi* | [**contentAccountsList**](docs/AccountsApi.md#contentAccountsList) | **GET** /{merchantId}/accounts | 
*AccountsApi* | [**contentAccountsUpdate**](docs/AccountsApi.md#contentAccountsUpdate) | **PUT** /{merchantId}/accounts/{accountId} | 
*AccountstatusesApi* | [**contentAccountstatusesCustombatch**](docs/AccountstatusesApi.md#contentAccountstatusesCustombatch) | **POST** /accountstatuses/batch | 
*AccountstatusesApi* | [**contentAccountstatusesGet**](docs/AccountstatusesApi.md#contentAccountstatusesGet) | **GET** /{merchantId}/accountstatuses/{accountId} | 
*AccountstatusesApi* | [**contentAccountstatusesList**](docs/AccountstatusesApi.md#contentAccountstatusesList) | **GET** /{merchantId}/accountstatuses | 
*AccounttaxApi* | [**contentAccounttaxCustombatch**](docs/AccounttaxApi.md#contentAccounttaxCustombatch) | **POST** /accounttax/batch | 
*AccounttaxApi* | [**contentAccounttaxGet**](docs/AccounttaxApi.md#contentAccounttaxGet) | **GET** /{merchantId}/accounttax/{accountId} | 
*AccounttaxApi* | [**contentAccounttaxList**](docs/AccounttaxApi.md#contentAccounttaxList) | **GET** /{merchantId}/accounttax | 
*AccounttaxApi* | [**contentAccounttaxUpdate**](docs/AccounttaxApi.md#contentAccounttaxUpdate) | **PUT** /{merchantId}/accounttax/{accountId} | 
*DatafeedsApi* | [**contentDatafeedsCustombatch**](docs/DatafeedsApi.md#contentDatafeedsCustombatch) | **POST** /datafeeds/batch | 
*DatafeedsApi* | [**contentDatafeedsDelete**](docs/DatafeedsApi.md#contentDatafeedsDelete) | **DELETE** /{merchantId}/datafeeds/{datafeedId} | 
*DatafeedsApi* | [**contentDatafeedsFetchnow**](docs/DatafeedsApi.md#contentDatafeedsFetchnow) | **POST** /{merchantId}/datafeeds/{datafeedId}/fetchNow | 
*DatafeedsApi* | [**contentDatafeedsGet**](docs/DatafeedsApi.md#contentDatafeedsGet) | **GET** /{merchantId}/datafeeds/{datafeedId} | 
*DatafeedsApi* | [**contentDatafeedsInsert**](docs/DatafeedsApi.md#contentDatafeedsInsert) | **POST** /{merchantId}/datafeeds | 
*DatafeedsApi* | [**contentDatafeedsList**](docs/DatafeedsApi.md#contentDatafeedsList) | **GET** /{merchantId}/datafeeds | 
*DatafeedsApi* | [**contentDatafeedsUpdate**](docs/DatafeedsApi.md#contentDatafeedsUpdate) | **PUT** /{merchantId}/datafeeds/{datafeedId} | 
*DatafeedstatusesApi* | [**contentDatafeedstatusesCustombatch**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesCustombatch) | **POST** /datafeedstatuses/batch | 
*DatafeedstatusesApi* | [**contentDatafeedstatusesGet**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesGet) | **GET** /{merchantId}/datafeedstatuses/{datafeedId} | 
*DatafeedstatusesApi* | [**contentDatafeedstatusesList**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesList) | **GET** /{merchantId}/datafeedstatuses | 
*LiasettingsApi* | [**contentLiasettingsCustombatch**](docs/LiasettingsApi.md#contentLiasettingsCustombatch) | **POST** /liasettings/batch | 
*LiasettingsApi* | [**contentLiasettingsGet**](docs/LiasettingsApi.md#contentLiasettingsGet) | **GET** /{merchantId}/liasettings/{accountId} | 
*LiasettingsApi* | [**contentLiasettingsGetaccessiblegmbaccounts**](docs/LiasettingsApi.md#contentLiasettingsGetaccessiblegmbaccounts) | **GET** /{merchantId}/liasettings/{accountId}/accessiblegmbaccounts | 
*LiasettingsApi* | [**contentLiasettingsList**](docs/LiasettingsApi.md#contentLiasettingsList) | **GET** /{merchantId}/liasettings | 
*LiasettingsApi* | [**contentLiasettingsListposdataproviders**](docs/LiasettingsApi.md#contentLiasettingsListposdataproviders) | **GET** /liasettings/posdataproviders | 
*LiasettingsApi* | [**contentLiasettingsRequestgmbaccess**](docs/LiasettingsApi.md#contentLiasettingsRequestgmbaccess) | **POST** /{merchantId}/liasettings/{accountId}/requestgmbaccess | 
*LiasettingsApi* | [**contentLiasettingsRequestinventoryverification**](docs/LiasettingsApi.md#contentLiasettingsRequestinventoryverification) | **POST** /{merchantId}/liasettings/{accountId}/requestinventoryverification/{country} | 
*LiasettingsApi* | [**contentLiasettingsSetinventoryverificationcontact**](docs/LiasettingsApi.md#contentLiasettingsSetinventoryverificationcontact) | **POST** /{merchantId}/liasettings/{accountId}/setinventoryverificationcontact | 
*LiasettingsApi* | [**contentLiasettingsSetposdataprovider**](docs/LiasettingsApi.md#contentLiasettingsSetposdataprovider) | **POST** /{merchantId}/liasettings/{accountId}/setposdataprovider | 
*LiasettingsApi* | [**contentLiasettingsUpdate**](docs/LiasettingsApi.md#contentLiasettingsUpdate) | **PUT** /{merchantId}/liasettings/{accountId} | 
*OrderinvoicesApi* | [**contentOrderinvoicesCreatechargeinvoice**](docs/OrderinvoicesApi.md#contentOrderinvoicesCreatechargeinvoice) | **POST** /{merchantId}/orderinvoices/{orderId}/createChargeInvoice | 
*OrderinvoicesApi* | [**contentOrderinvoicesCreaterefundinvoice**](docs/OrderinvoicesApi.md#contentOrderinvoicesCreaterefundinvoice) | **POST** /{merchantId}/orderinvoices/{orderId}/createRefundInvoice | 
*OrderreportsApi* | [**contentOrderreportsListdisbursements**](docs/OrderreportsApi.md#contentOrderreportsListdisbursements) | **GET** /{merchantId}/orderreports/disbursements | 
*OrderreportsApi* | [**contentOrderreportsListtransactions**](docs/OrderreportsApi.md#contentOrderreportsListtransactions) | **GET** /{merchantId}/orderreports/disbursements/{disbursementId}/transactions | 
*OrderreturnsApi* | [**contentOrderreturnsGet**](docs/OrderreturnsApi.md#contentOrderreturnsGet) | **GET** /{merchantId}/orderreturns/{returnId} | 
*OrderreturnsApi* | [**contentOrderreturnsList**](docs/OrderreturnsApi.md#contentOrderreturnsList) | **GET** /{merchantId}/orderreturns | 
*OrdersApi* | [**contentOrdersAcknowledge**](docs/OrdersApi.md#contentOrdersAcknowledge) | **POST** /{merchantId}/orders/{orderId}/acknowledge | 
*OrdersApi* | [**contentOrdersAdvancetestorder**](docs/OrdersApi.md#contentOrdersAdvancetestorder) | **POST** /{merchantId}/testorders/{orderId}/advance | 
*OrdersApi* | [**contentOrdersCancel**](docs/OrdersApi.md#contentOrdersCancel) | **POST** /{merchantId}/orders/{orderId}/cancel | 
*OrdersApi* | [**contentOrdersCancellineitem**](docs/OrdersApi.md#contentOrdersCancellineitem) | **POST** /{merchantId}/orders/{orderId}/cancelLineItem | 
*OrdersApi* | [**contentOrdersCanceltestorderbycustomer**](docs/OrdersApi.md#contentOrdersCanceltestorderbycustomer) | **POST** /{merchantId}/testorders/{orderId}/cancelByCustomer | 
*OrdersApi* | [**contentOrdersCreatetestorder**](docs/OrdersApi.md#contentOrdersCreatetestorder) | **POST** /{merchantId}/testorders | 
*OrdersApi* | [**contentOrdersCreatetestreturn**](docs/OrdersApi.md#contentOrdersCreatetestreturn) | **POST** /{merchantId}/orders/{orderId}/testreturn | 
*OrdersApi* | [**contentOrdersCustombatch**](docs/OrdersApi.md#contentOrdersCustombatch) | **POST** /orders/batch | 
*OrdersApi* | [**contentOrdersGet**](docs/OrdersApi.md#contentOrdersGet) | **GET** /{merchantId}/orders/{orderId} | 
*OrdersApi* | [**contentOrdersGetbymerchantorderid**](docs/OrdersApi.md#contentOrdersGetbymerchantorderid) | **GET** /{merchantId}/ordersbymerchantid/{merchantOrderId} | 
*OrdersApi* | [**contentOrdersGettestordertemplate**](docs/OrdersApi.md#contentOrdersGettestordertemplate) | **GET** /{merchantId}/testordertemplates/{templateName} | 
*OrdersApi* | [**contentOrdersInstorerefundlineitem**](docs/OrdersApi.md#contentOrdersInstorerefundlineitem) | **POST** /{merchantId}/orders/{orderId}/inStoreRefundLineItem | 
*OrdersApi* | [**contentOrdersList**](docs/OrdersApi.md#contentOrdersList) | **GET** /{merchantId}/orders | 
*OrdersApi* | [**contentOrdersRefund**](docs/OrdersApi.md#contentOrdersRefund) | **POST** /{merchantId}/orders/{orderId}/refund | 
*OrdersApi* | [**contentOrdersRejectreturnlineitem**](docs/OrdersApi.md#contentOrdersRejectreturnlineitem) | **POST** /{merchantId}/orders/{orderId}/rejectReturnLineItem | 
*OrdersApi* | [**contentOrdersReturnlineitem**](docs/OrdersApi.md#contentOrdersReturnlineitem) | **POST** /{merchantId}/orders/{orderId}/returnLineItem | 
*OrdersApi* | [**contentOrdersReturnrefundlineitem**](docs/OrdersApi.md#contentOrdersReturnrefundlineitem) | **POST** /{merchantId}/orders/{orderId}/returnRefundLineItem | 
*OrdersApi* | [**contentOrdersSetlineitemmetadata**](docs/OrdersApi.md#contentOrdersSetlineitemmetadata) | **POST** /{merchantId}/orders/{orderId}/setLineItemMetadata | 
*OrdersApi* | [**contentOrdersShiplineitems**](docs/OrdersApi.md#contentOrdersShiplineitems) | **POST** /{merchantId}/orders/{orderId}/shipLineItems | 
*OrdersApi* | [**contentOrdersUpdatelineitemshippingdetails**](docs/OrdersApi.md#contentOrdersUpdatelineitemshippingdetails) | **POST** /{merchantId}/orders/{orderId}/updateLineItemShippingDetails | 
*OrdersApi* | [**contentOrdersUpdatemerchantorderid**](docs/OrdersApi.md#contentOrdersUpdatemerchantorderid) | **POST** /{merchantId}/orders/{orderId}/updateMerchantOrderId | 
*OrdersApi* | [**contentOrdersUpdateshipment**](docs/OrdersApi.md#contentOrdersUpdateshipment) | **POST** /{merchantId}/orders/{orderId}/updateShipment | 
*PosApi* | [**contentPosCustombatch**](docs/PosApi.md#contentPosCustombatch) | **POST** /pos/batch | 
*PosApi* | [**contentPosDelete**](docs/PosApi.md#contentPosDelete) | **DELETE** /{merchantId}/pos/{targetMerchantId}/store/{storeCode} | 
*PosApi* | [**contentPosGet**](docs/PosApi.md#contentPosGet) | **GET** /{merchantId}/pos/{targetMerchantId}/store/{storeCode} | 
*PosApi* | [**contentPosInsert**](docs/PosApi.md#contentPosInsert) | **POST** /{merchantId}/pos/{targetMerchantId}/store | 
*PosApi* | [**contentPosInventory**](docs/PosApi.md#contentPosInventory) | **POST** /{merchantId}/pos/{targetMerchantId}/inventory | 
*PosApi* | [**contentPosList**](docs/PosApi.md#contentPosList) | **GET** /{merchantId}/pos/{targetMerchantId}/store | 
*PosApi* | [**contentPosSale**](docs/PosApi.md#contentPosSale) | **POST** /{merchantId}/pos/{targetMerchantId}/sale | 
*ProductsApi* | [**contentProductsCustombatch**](docs/ProductsApi.md#contentProductsCustombatch) | **POST** /products/batch | 
*ProductsApi* | [**contentProductsDelete**](docs/ProductsApi.md#contentProductsDelete) | **DELETE** /{merchantId}/products/{productId} | 
*ProductsApi* | [**contentProductsGet**](docs/ProductsApi.md#contentProductsGet) | **GET** /{merchantId}/products/{productId} | 
*ProductsApi* | [**contentProductsInsert**](docs/ProductsApi.md#contentProductsInsert) | **POST** /{merchantId}/products | 
*ProductsApi* | [**contentProductsList**](docs/ProductsApi.md#contentProductsList) | **GET** /{merchantId}/products | 
*ProductstatusesApi* | [**contentProductstatusesCustombatch**](docs/ProductstatusesApi.md#contentProductstatusesCustombatch) | **POST** /productstatuses/batch | 
*ProductstatusesApi* | [**contentProductstatusesGet**](docs/ProductstatusesApi.md#contentProductstatusesGet) | **GET** /{merchantId}/productstatuses/{productId} | 
*ProductstatusesApi* | [**contentProductstatusesList**](docs/ProductstatusesApi.md#contentProductstatusesList) | **GET** /{merchantId}/productstatuses | 
*ShippingsettingsApi* | [**contentShippingsettingsCustombatch**](docs/ShippingsettingsApi.md#contentShippingsettingsCustombatch) | **POST** /shippingsettings/batch | 
*ShippingsettingsApi* | [**contentShippingsettingsGet**](docs/ShippingsettingsApi.md#contentShippingsettingsGet) | **GET** /{merchantId}/shippingsettings/{accountId} | 
*ShippingsettingsApi* | [**contentShippingsettingsGetsupportedcarriers**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedcarriers) | **GET** /{merchantId}/supportedCarriers | 
*ShippingsettingsApi* | [**contentShippingsettingsGetsupportedholidays**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedholidays) | **GET** /{merchantId}/supportedHolidays | 
*ShippingsettingsApi* | [**contentShippingsettingsGetsupportedpickupservices**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedpickupservices) | **GET** /{merchantId}/supportedPickupServices | 
*ShippingsettingsApi* | [**contentShippingsettingsList**](docs/ShippingsettingsApi.md#contentShippingsettingsList) | **GET** /{merchantId}/shippingsettings | 
*ShippingsettingsApi* | [**contentShippingsettingsUpdate**](docs/ShippingsettingsApi.md#contentShippingsettingsUpdate) | **PUT** /{merchantId}/shippingsettings/{accountId} | 


## Documentation for Models

 - [Account](docs/Account.md)
 - [AccountAddress](docs/AccountAddress.md)
 - [AccountAdwordsLink](docs/AccountAdwordsLink.md)
 - [AccountBusinessInformation](docs/AccountBusinessInformation.md)
 - [AccountCustomerService](docs/AccountCustomerService.md)
 - [AccountGoogleMyBusinessLink](docs/AccountGoogleMyBusinessLink.md)
 - [AccountIdentifier](docs/AccountIdentifier.md)
 - [AccountStatus](docs/AccountStatus.md)
 - [AccountStatusAccountLevelIssue](docs/AccountStatusAccountLevelIssue.md)
 - [AccountStatusDataQualityIssue](docs/AccountStatusDataQualityIssue.md)
 - [AccountStatusExampleItem](docs/AccountStatusExampleItem.md)
 - [AccountStatusItemLevelIssue](docs/AccountStatusItemLevelIssue.md)
 - [AccountStatusProducts](docs/AccountStatusProducts.md)
 - [AccountStatusStatistics](docs/AccountStatusStatistics.md)
 - [AccountTax](docs/AccountTax.md)
 - [AccountTaxTaxRule](docs/AccountTaxTaxRule.md)
 - [AccountUser](docs/AccountUser.md)
 - [AccountYouTubeChannelLink](docs/AccountYouTubeChannelLink.md)
 - [AccountsAuthInfoResponse](docs/AccountsAuthInfoResponse.md)
 - [AccountsClaimWebsiteResponse](docs/AccountsClaimWebsiteResponse.md)
 - [AccountsCustomBatchRequest](docs/AccountsCustomBatchRequest.md)
 - [AccountsCustomBatchRequestEntry](docs/AccountsCustomBatchRequestEntry.md)
 - [AccountsCustomBatchRequestEntryLinkRequest](docs/AccountsCustomBatchRequestEntryLinkRequest.md)
 - [AccountsCustomBatchResponse](docs/AccountsCustomBatchResponse.md)
 - [AccountsCustomBatchResponseEntry](docs/AccountsCustomBatchResponseEntry.md)
 - [AccountsLinkRequest](docs/AccountsLinkRequest.md)
 - [AccountsLinkResponse](docs/AccountsLinkResponse.md)
 - [AccountsListResponse](docs/AccountsListResponse.md)
 - [AccountstatusesCustomBatchRequest](docs/AccountstatusesCustomBatchRequest.md)
 - [AccountstatusesCustomBatchRequestEntry](docs/AccountstatusesCustomBatchRequestEntry.md)
 - [AccountstatusesCustomBatchResponse](docs/AccountstatusesCustomBatchResponse.md)
 - [AccountstatusesCustomBatchResponseEntry](docs/AccountstatusesCustomBatchResponseEntry.md)
 - [AccountstatusesListResponse](docs/AccountstatusesListResponse.md)
 - [AccounttaxCustomBatchRequest](docs/AccounttaxCustomBatchRequest.md)
 - [AccounttaxCustomBatchRequestEntry](docs/AccounttaxCustomBatchRequestEntry.md)
 - [AccounttaxCustomBatchResponse](docs/AccounttaxCustomBatchResponse.md)
 - [AccounttaxCustomBatchResponseEntry](docs/AccounttaxCustomBatchResponseEntry.md)
 - [AccounttaxListResponse](docs/AccounttaxListResponse.md)
 - [Address](docs/Address.md)
 - [Amount](docs/Amount.md)
 - [BusinessDayConfig](docs/BusinessDayConfig.md)
 - [CarrierRate](docs/CarrierRate.md)
 - [CarriersCarrier](docs/CarriersCarrier.md)
 - [CustomAttribute](docs/CustomAttribute.md)
 - [CustomGroup](docs/CustomGroup.md)
 - [CustomerReturnReason](docs/CustomerReturnReason.md)
 - [CutoffTime](docs/CutoffTime.md)
 - [Datafeed](docs/Datafeed.md)
 - [DatafeedFetchSchedule](docs/DatafeedFetchSchedule.md)
 - [DatafeedFormat](docs/DatafeedFormat.md)
 - [DatafeedStatus](docs/DatafeedStatus.md)
 - [DatafeedStatusError](docs/DatafeedStatusError.md)
 - [DatafeedStatusExample](docs/DatafeedStatusExample.md)
 - [DatafeedTarget](docs/DatafeedTarget.md)
 - [DatafeedsCustomBatchRequest](docs/DatafeedsCustomBatchRequest.md)
 - [DatafeedsCustomBatchRequestEntry](docs/DatafeedsCustomBatchRequestEntry.md)
 - [DatafeedsCustomBatchResponse](docs/DatafeedsCustomBatchResponse.md)
 - [DatafeedsCustomBatchResponseEntry](docs/DatafeedsCustomBatchResponseEntry.md)
 - [DatafeedsFetchNowResponse](docs/DatafeedsFetchNowResponse.md)
 - [DatafeedsListResponse](docs/DatafeedsListResponse.md)
 - [DatafeedstatusesCustomBatchRequest](docs/DatafeedstatusesCustomBatchRequest.md)
 - [DatafeedstatusesCustomBatchRequestEntry](docs/DatafeedstatusesCustomBatchRequestEntry.md)
 - [DatafeedstatusesCustomBatchResponse](docs/DatafeedstatusesCustomBatchResponse.md)
 - [DatafeedstatusesCustomBatchResponseEntry](docs/DatafeedstatusesCustomBatchResponseEntry.md)
 - [DatafeedstatusesListResponse](docs/DatafeedstatusesListResponse.md)
 - [DeliveryTime](docs/DeliveryTime.md)
 - [Error](docs/Error.md)
 - [Errors](docs/Errors.md)
 - [GmbAccounts](docs/GmbAccounts.md)
 - [GmbAccountsGmbAccount](docs/GmbAccountsGmbAccount.md)
 - [Headers](docs/Headers.md)
 - [HolidayCutoff](docs/HolidayCutoff.md)
 - [HolidaysHoliday](docs/HolidaysHoliday.md)
 - [Installment](docs/Installment.md)
 - [InvoiceSummary](docs/InvoiceSummary.md)
 - [InvoiceSummaryAdditionalChargeSummary](docs/InvoiceSummaryAdditionalChargeSummary.md)
 - [LiaAboutPageSettings](docs/LiaAboutPageSettings.md)
 - [LiaCountrySettings](docs/LiaCountrySettings.md)
 - [LiaInventorySettings](docs/LiaInventorySettings.md)
 - [LiaOnDisplayToOrderSettings](docs/LiaOnDisplayToOrderSettings.md)
 - [LiaPosDataProvider](docs/LiaPosDataProvider.md)
 - [LiaSettings](docs/LiaSettings.md)
 - [LiasettingsCustomBatchRequest](docs/LiasettingsCustomBatchRequest.md)
 - [LiasettingsCustomBatchRequestEntry](docs/LiasettingsCustomBatchRequestEntry.md)
 - [LiasettingsCustomBatchResponse](docs/LiasettingsCustomBatchResponse.md)
 - [LiasettingsCustomBatchResponseEntry](docs/LiasettingsCustomBatchResponseEntry.md)
 - [LiasettingsGetAccessibleGmbAccountsResponse](docs/LiasettingsGetAccessibleGmbAccountsResponse.md)
 - [LiasettingsListPosDataProvidersResponse](docs/LiasettingsListPosDataProvidersResponse.md)
 - [LiasettingsListResponse](docs/LiasettingsListResponse.md)
 - [LiasettingsRequestGmbAccessResponse](docs/LiasettingsRequestGmbAccessResponse.md)
 - [LiasettingsRequestInventoryVerificationResponse](docs/LiasettingsRequestInventoryVerificationResponse.md)
 - [LiasettingsSetInventoryVerificationContactResponse](docs/LiasettingsSetInventoryVerificationContactResponse.md)
 - [LiasettingsSetPosDataProviderResponse](docs/LiasettingsSetPosDataProviderResponse.md)
 - [LocationIdSet](docs/LocationIdSet.md)
 - [LoyaltyPoints](docs/LoyaltyPoints.md)
 - [MerchantOrderReturn](docs/MerchantOrderReturn.md)
 - [MerchantOrderReturnItem](docs/MerchantOrderReturnItem.md)
 - [MinimumOrderValueTable](docs/MinimumOrderValueTable.md)
 - [MinimumOrderValueTableStoreCodeSetWithMov](docs/MinimumOrderValueTableStoreCodeSetWithMov.md)
 - [Order](docs/Order.md)
 - [OrderAddress](docs/OrderAddress.md)
 - [OrderCancellation](docs/OrderCancellation.md)
 - [OrderCustomer](docs/OrderCustomer.md)
 - [OrderCustomerMarketingRightsInfo](docs/OrderCustomerMarketingRightsInfo.md)
 - [OrderDeliveryDetails](docs/OrderDeliveryDetails.md)
 - [OrderLegacyPromotion](docs/OrderLegacyPromotion.md)
 - [OrderLegacyPromotionBenefit](docs/OrderLegacyPromotionBenefit.md)
 - [OrderLineItem](docs/OrderLineItem.md)
 - [OrderLineItemProduct](docs/OrderLineItemProduct.md)
 - [OrderLineItemProductFee](docs/OrderLineItemProductFee.md)
 - [OrderLineItemProductVariantAttribute](docs/OrderLineItemProductVariantAttribute.md)
 - [OrderLineItemReturnInfo](docs/OrderLineItemReturnInfo.md)
 - [OrderLineItemShippingDetails](docs/OrderLineItemShippingDetails.md)
 - [OrderLineItemShippingDetailsMethod](docs/OrderLineItemShippingDetailsMethod.md)
 - [OrderMerchantProvidedAnnotation](docs/OrderMerchantProvidedAnnotation.md)
 - [OrderPaymentMethod](docs/OrderPaymentMethod.md)
 - [OrderPickupDetails](docs/OrderPickupDetails.md)
 - [OrderPickupDetailsCollector](docs/OrderPickupDetailsCollector.md)
 - [OrderRefund](docs/OrderRefund.md)
 - [OrderReportDisbursement](docs/OrderReportDisbursement.md)
 - [OrderReportTransaction](docs/OrderReportTransaction.md)
 - [OrderReturn](docs/OrderReturn.md)
 - [OrderShipment](docs/OrderShipment.md)
 - [OrderShipmentLineItemShipment](docs/OrderShipmentLineItemShipment.md)
 - [OrderShipmentScheduledDeliveryDetails](docs/OrderShipmentScheduledDeliveryDetails.md)
 - [OrderinvoicesCreateChargeInvoiceRequest](docs/OrderinvoicesCreateChargeInvoiceRequest.md)
 - [OrderinvoicesCreateChargeInvoiceResponse](docs/OrderinvoicesCreateChargeInvoiceResponse.md)
 - [OrderinvoicesCreateRefundInvoiceRequest](docs/OrderinvoicesCreateRefundInvoiceRequest.md)
 - [OrderinvoicesCreateRefundInvoiceResponse](docs/OrderinvoicesCreateRefundInvoiceResponse.md)
 - [OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceRefundOption](docs/OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceRefundOption.md)
 - [OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceReturnOption](docs/OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceReturnOption.md)
 - [OrderreportsListDisbursementsResponse](docs/OrderreportsListDisbursementsResponse.md)
 - [OrderreportsListTransactionsResponse](docs/OrderreportsListTransactionsResponse.md)
 - [OrderreturnsListResponse](docs/OrderreturnsListResponse.md)
 - [OrdersAcknowledgeRequest](docs/OrdersAcknowledgeRequest.md)
 - [OrdersAcknowledgeResponse](docs/OrdersAcknowledgeResponse.md)
 - [OrdersAdvanceTestOrderResponse](docs/OrdersAdvanceTestOrderResponse.md)
 - [OrdersCancelLineItemRequest](docs/OrdersCancelLineItemRequest.md)
 - [OrdersCancelLineItemResponse](docs/OrdersCancelLineItemResponse.md)
 - [OrdersCancelRequest](docs/OrdersCancelRequest.md)
 - [OrdersCancelResponse](docs/OrdersCancelResponse.md)
 - [OrdersCancelTestOrderByCustomerRequest](docs/OrdersCancelTestOrderByCustomerRequest.md)
 - [OrdersCancelTestOrderByCustomerResponse](docs/OrdersCancelTestOrderByCustomerResponse.md)
 - [OrdersCreateTestOrderRequest](docs/OrdersCreateTestOrderRequest.md)
 - [OrdersCreateTestOrderResponse](docs/OrdersCreateTestOrderResponse.md)
 - [OrdersCreateTestReturnRequest](docs/OrdersCreateTestReturnRequest.md)
 - [OrdersCreateTestReturnResponse](docs/OrdersCreateTestReturnResponse.md)
 - [OrdersCustomBatchRequest](docs/OrdersCustomBatchRequest.md)
 - [OrdersCustomBatchRequestEntry](docs/OrdersCustomBatchRequestEntry.md)
 - [OrdersCustomBatchRequestEntryCancel](docs/OrdersCustomBatchRequestEntryCancel.md)
 - [OrdersCustomBatchRequestEntryCancelLineItem](docs/OrdersCustomBatchRequestEntryCancelLineItem.md)
 - [OrdersCustomBatchRequestEntryCreateTestReturnReturnItem](docs/OrdersCustomBatchRequestEntryCreateTestReturnReturnItem.md)
 - [OrdersCustomBatchRequestEntryInStoreRefundLineItem](docs/OrdersCustomBatchRequestEntryInStoreRefundLineItem.md)
 - [OrdersCustomBatchRequestEntryRefund](docs/OrdersCustomBatchRequestEntryRefund.md)
 - [OrdersCustomBatchRequestEntryRejectReturnLineItem](docs/OrdersCustomBatchRequestEntryRejectReturnLineItem.md)
 - [OrdersCustomBatchRequestEntryReturnLineItem](docs/OrdersCustomBatchRequestEntryReturnLineItem.md)
 - [OrdersCustomBatchRequestEntryReturnRefundLineItem](docs/OrdersCustomBatchRequestEntryReturnRefundLineItem.md)
 - [OrdersCustomBatchRequestEntrySetLineItemMetadata](docs/OrdersCustomBatchRequestEntrySetLineItemMetadata.md)
 - [OrdersCustomBatchRequestEntryShipLineItems](docs/OrdersCustomBatchRequestEntryShipLineItems.md)
 - [OrdersCustomBatchRequestEntryShipLineItemsShipmentInfo](docs/OrdersCustomBatchRequestEntryShipLineItemsShipmentInfo.md)
 - [OrdersCustomBatchRequestEntryUpdateLineItemShippingDetails](docs/OrdersCustomBatchRequestEntryUpdateLineItemShippingDetails.md)
 - [OrdersCustomBatchRequestEntryUpdateShipment](docs/OrdersCustomBatchRequestEntryUpdateShipment.md)
 - [OrdersCustomBatchResponse](docs/OrdersCustomBatchResponse.md)
 - [OrdersCustomBatchResponseEntry](docs/OrdersCustomBatchResponseEntry.md)
 - [OrdersGetByMerchantOrderIdResponse](docs/OrdersGetByMerchantOrderIdResponse.md)
 - [OrdersGetTestOrderTemplateResponse](docs/OrdersGetTestOrderTemplateResponse.md)
 - [OrdersInStoreRefundLineItemRequest](docs/OrdersInStoreRefundLineItemRequest.md)
 - [OrdersInStoreRefundLineItemResponse](docs/OrdersInStoreRefundLineItemResponse.md)
 - [OrdersListResponse](docs/OrdersListResponse.md)
 - [OrdersRefundRequest](docs/OrdersRefundRequest.md)
 - [OrdersRefundResponse](docs/OrdersRefundResponse.md)
 - [OrdersRejectReturnLineItemRequest](docs/OrdersRejectReturnLineItemRequest.md)
 - [OrdersRejectReturnLineItemResponse](docs/OrdersRejectReturnLineItemResponse.md)
 - [OrdersReturnLineItemRequest](docs/OrdersReturnLineItemRequest.md)
 - [OrdersReturnLineItemResponse](docs/OrdersReturnLineItemResponse.md)
 - [OrdersReturnRefundLineItemRequest](docs/OrdersReturnRefundLineItemRequest.md)
 - [OrdersReturnRefundLineItemResponse](docs/OrdersReturnRefundLineItemResponse.md)
 - [OrdersSetLineItemMetadataRequest](docs/OrdersSetLineItemMetadataRequest.md)
 - [OrdersSetLineItemMetadataResponse](docs/OrdersSetLineItemMetadataResponse.md)
 - [OrdersShipLineItemsRequest](docs/OrdersShipLineItemsRequest.md)
 - [OrdersShipLineItemsResponse](docs/OrdersShipLineItemsResponse.md)
 - [OrdersUpdateLineItemShippingDetailsRequest](docs/OrdersUpdateLineItemShippingDetailsRequest.md)
 - [OrdersUpdateLineItemShippingDetailsResponse](docs/OrdersUpdateLineItemShippingDetailsResponse.md)
 - [OrdersUpdateMerchantOrderIdRequest](docs/OrdersUpdateMerchantOrderIdRequest.md)
 - [OrdersUpdateMerchantOrderIdResponse](docs/OrdersUpdateMerchantOrderIdResponse.md)
 - [OrdersUpdateShipmentRequest](docs/OrdersUpdateShipmentRequest.md)
 - [OrdersUpdateShipmentResponse](docs/OrdersUpdateShipmentResponse.md)
 - [PickupCarrierService](docs/PickupCarrierService.md)
 - [PickupServicesPickupService](docs/PickupServicesPickupService.md)
 - [PosCustomBatchRequest](docs/PosCustomBatchRequest.md)
 - [PosCustomBatchRequestEntry](docs/PosCustomBatchRequestEntry.md)
 - [PosCustomBatchResponse](docs/PosCustomBatchResponse.md)
 - [PosCustomBatchResponseEntry](docs/PosCustomBatchResponseEntry.md)
 - [PosDataProviders](docs/PosDataProviders.md)
 - [PosDataProvidersPosDataProvider](docs/PosDataProvidersPosDataProvider.md)
 - [PosInventory](docs/PosInventory.md)
 - [PosInventoryRequest](docs/PosInventoryRequest.md)
 - [PosInventoryResponse](docs/PosInventoryResponse.md)
 - [PosListResponse](docs/PosListResponse.md)
 - [PosSale](docs/PosSale.md)
 - [PosSaleRequest](docs/PosSaleRequest.md)
 - [PosSaleResponse](docs/PosSaleResponse.md)
 - [PosStore](docs/PosStore.md)
 - [PostalCodeGroup](docs/PostalCodeGroup.md)
 - [PostalCodeRange](docs/PostalCodeRange.md)
 - [Price](docs/Price.md)
 - [Product](docs/Product.md)
 - [ProductAmount](docs/ProductAmount.md)
 - [ProductAspect](docs/ProductAspect.md)
 - [ProductDestination](docs/ProductDestination.md)
 - [ProductShipping](docs/ProductShipping.md)
 - [ProductShippingDimension](docs/ProductShippingDimension.md)
 - [ProductShippingWeight](docs/ProductShippingWeight.md)
 - [ProductStatus](docs/ProductStatus.md)
 - [ProductStatusDataQualityIssue](docs/ProductStatusDataQualityIssue.md)
 - [ProductStatusDestinationStatus](docs/ProductStatusDestinationStatus.md)
 - [ProductStatusItemLevelIssue](docs/ProductStatusItemLevelIssue.md)
 - [ProductTax](docs/ProductTax.md)
 - [ProductUnitPricingBaseMeasure](docs/ProductUnitPricingBaseMeasure.md)
 - [ProductUnitPricingMeasure](docs/ProductUnitPricingMeasure.md)
 - [ProductsCustomBatchRequest](docs/ProductsCustomBatchRequest.md)
 - [ProductsCustomBatchRequestEntry](docs/ProductsCustomBatchRequestEntry.md)
 - [ProductsCustomBatchResponse](docs/ProductsCustomBatchResponse.md)
 - [ProductsCustomBatchResponseEntry](docs/ProductsCustomBatchResponseEntry.md)
 - [ProductsListResponse](docs/ProductsListResponse.md)
 - [ProductstatusesCustomBatchRequest](docs/ProductstatusesCustomBatchRequest.md)
 - [ProductstatusesCustomBatchRequestEntry](docs/ProductstatusesCustomBatchRequestEntry.md)
 - [ProductstatusesCustomBatchResponse](docs/ProductstatusesCustomBatchResponse.md)
 - [ProductstatusesCustomBatchResponseEntry](docs/ProductstatusesCustomBatchResponseEntry.md)
 - [ProductstatusesListResponse](docs/ProductstatusesListResponse.md)
 - [Promotion](docs/Promotion.md)
 - [RateGroup](docs/RateGroup.md)
 - [RefundReason](docs/RefundReason.md)
 - [ReturnShipment](docs/ReturnShipment.md)
 - [Row](docs/Row.md)
 - [Service](docs/Service.md)
 - [ShipmentInvoice](docs/ShipmentInvoice.md)
 - [ShipmentInvoiceLineItemInvoice](docs/ShipmentInvoiceLineItemInvoice.md)
 - [ShipmentTrackingInfo](docs/ShipmentTrackingInfo.md)
 - [ShippingSettings](docs/ShippingSettings.md)
 - [ShippingsettingsCustomBatchRequest](docs/ShippingsettingsCustomBatchRequest.md)
 - [ShippingsettingsCustomBatchRequestEntry](docs/ShippingsettingsCustomBatchRequestEntry.md)
 - [ShippingsettingsCustomBatchResponse](docs/ShippingsettingsCustomBatchResponse.md)
 - [ShippingsettingsCustomBatchResponseEntry](docs/ShippingsettingsCustomBatchResponseEntry.md)
 - [ShippingsettingsGetSupportedCarriersResponse](docs/ShippingsettingsGetSupportedCarriersResponse.md)
 - [ShippingsettingsGetSupportedHolidaysResponse](docs/ShippingsettingsGetSupportedHolidaysResponse.md)
 - [ShippingsettingsGetSupportedPickupServicesResponse](docs/ShippingsettingsGetSupportedPickupServicesResponse.md)
 - [ShippingsettingsListResponse](docs/ShippingsettingsListResponse.md)
 - [Table](docs/Table.md)
 - [TestOrder](docs/TestOrder.md)
 - [TestOrderCustomer](docs/TestOrderCustomer.md)
 - [TestOrderCustomerMarketingRightsInfo](docs/TestOrderCustomerMarketingRightsInfo.md)
 - [TestOrderLineItem](docs/TestOrderLineItem.md)
 - [TestOrderLineItemProduct](docs/TestOrderLineItemProduct.md)
 - [TestOrderPaymentMethod](docs/TestOrderPaymentMethod.md)
 - [TransitTable](docs/TransitTable.md)
 - [TransitTableTransitTimeRow](docs/TransitTableTransitTimeRow.md)
 - [TransitTableTransitTimeRowTransitTimeValue](docs/TransitTableTransitTimeRowTransitTimeValue.md)
 - [UnitInvoice](docs/UnitInvoice.md)
 - [UnitInvoiceAdditionalCharge](docs/UnitInvoiceAdditionalCharge.md)
 - [UnitInvoiceTaxLine](docs/UnitInvoiceTaxLine.md)
 - [Value](docs/Value.md)
 - [Warehouse](docs/Warehouse.md)
 - [WarehouseBasedDeliveryTime](docs/WarehouseBasedDeliveryTime.md)
 - [WarehouseCutoffTime](docs/WarehouseCutoffTime.md)
 - [Weight](docs/Weight.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/content: Manage your product listings and accounts for Google Shopping

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/content: Manage your product listings and accounts for Google Shopping


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



