APIs/googleapis.com/content/v2.1/java-client/README.md
# openapi-java-client

Content API for Shopping
- API version: v2.1
  - Build date: 2024-10-12T11:51:00.560037-04:00[America/New_York]
  - Generator version: 7.9.0

Manage your product listings and accounts for Google Shopping

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2.1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AccountsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://shoppingcontent.googleapis.com/content/v2.1");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AccountsApi apiInstance = new AccountsApi(defaultClient);
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    try {
      AccountsAuthInfoResponse result = apiInstance.contentAccountsAuthinfo($xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AccountsApi#contentAccountsAuthinfo");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://shoppingcontent.googleapis.com/content/v2.1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**contentAccountsAuthinfo**](docs/AccountsApi.md#contentAccountsAuthinfo) | **GET** /accounts/authinfo | 
*AccountsApi* | [**contentAccountsClaimwebsite**](docs/AccountsApi.md#contentAccountsClaimwebsite) | **POST** /{merchantId}/accounts/{accountId}/claimwebsite | 
*AccountsApi* | [**contentAccountsCredentialsCreate**](docs/AccountsApi.md#contentAccountsCredentialsCreate) | **POST** /accounts/{accountId}/credentials | 
*AccountsApi* | [**contentAccountsCustombatch**](docs/AccountsApi.md#contentAccountsCustombatch) | **POST** /accounts/batch | 
*AccountsApi* | [**contentAccountsDelete**](docs/AccountsApi.md#contentAccountsDelete) | **DELETE** /{merchantId}/accounts/{accountId} | 
*AccountsApi* | [**contentAccountsGet**](docs/AccountsApi.md#contentAccountsGet) | **GET** /{merchantId}/accounts/{accountId} | 
*AccountsApi* | [**contentAccountsInsert**](docs/AccountsApi.md#contentAccountsInsert) | **POST** /{merchantId}/accounts | 
*AccountsApi* | [**contentAccountsLabelsCreate**](docs/AccountsApi.md#contentAccountsLabelsCreate) | **POST** /accounts/{accountId}/labels | 
*AccountsApi* | [**contentAccountsLabelsDelete**](docs/AccountsApi.md#contentAccountsLabelsDelete) | **DELETE** /accounts/{accountId}/labels/{labelId} | 
*AccountsApi* | [**contentAccountsLabelsList**](docs/AccountsApi.md#contentAccountsLabelsList) | **GET** /accounts/{accountId}/labels | 
*AccountsApi* | [**contentAccountsLabelsPatch**](docs/AccountsApi.md#contentAccountsLabelsPatch) | **PATCH** /accounts/{accountId}/labels/{labelId} | 
*AccountsApi* | [**contentAccountsLink**](docs/AccountsApi.md#contentAccountsLink) | **POST** /{merchantId}/accounts/{accountId}/link | 
*AccountsApi* | [**contentAccountsList**](docs/AccountsApi.md#contentAccountsList) | **GET** /{merchantId}/accounts | 
*AccountsApi* | [**contentAccountsListlinks**](docs/AccountsApi.md#contentAccountsListlinks) | **GET** /{merchantId}/accounts/{accountId}/listlinks | 
*AccountsApi* | [**contentAccountsRequestphoneverification**](docs/AccountsApi.md#contentAccountsRequestphoneverification) | **POST** /{merchantId}/accounts/{accountId}/requestphoneverification | 
*AccountsApi* | [**contentAccountsReturncarrierCreate**](docs/AccountsApi.md#contentAccountsReturncarrierCreate) | **POST** /accounts/{accountId}/returncarrier | 
*AccountsApi* | [**contentAccountsReturncarrierDelete**](docs/AccountsApi.md#contentAccountsReturncarrierDelete) | **DELETE** /accounts/{accountId}/returncarrier/{carrierAccountId} | 
*AccountsApi* | [**contentAccountsReturncarrierList**](docs/AccountsApi.md#contentAccountsReturncarrierList) | **GET** /accounts/{accountId}/returncarrier | 
*AccountsApi* | [**contentAccountsReturncarrierPatch**](docs/AccountsApi.md#contentAccountsReturncarrierPatch) | **PATCH** /accounts/{accountId}/returncarrier/{carrierAccountId} | 
*AccountsApi* | [**contentAccountsUpdate**](docs/AccountsApi.md#contentAccountsUpdate) | **PUT** /{merchantId}/accounts/{accountId} | 
*AccountsApi* | [**contentAccountsUpdatelabels**](docs/AccountsApi.md#contentAccountsUpdatelabels) | **POST** /{merchantId}/accounts/{accountId}/updatelabels | 
*AccountsApi* | [**contentAccountsVerifyphonenumber**](docs/AccountsApi.md#contentAccountsVerifyphonenumber) | **POST** /{merchantId}/accounts/{accountId}/verifyphonenumber | 
*AccountstatusesApi* | [**contentAccountstatusesCustombatch**](docs/AccountstatusesApi.md#contentAccountstatusesCustombatch) | **POST** /accountstatuses/batch | 
*AccountstatusesApi* | [**contentAccountstatusesGet**](docs/AccountstatusesApi.md#contentAccountstatusesGet) | **GET** /{merchantId}/accountstatuses/{accountId} | 
*AccountstatusesApi* | [**contentAccountstatusesList**](docs/AccountstatusesApi.md#contentAccountstatusesList) | **GET** /{merchantId}/accountstatuses | 
*AccounttaxApi* | [**contentAccounttaxCustombatch**](docs/AccounttaxApi.md#contentAccounttaxCustombatch) | **POST** /accounttax/batch | 
*AccounttaxApi* | [**contentAccounttaxGet**](docs/AccounttaxApi.md#contentAccounttaxGet) | **GET** /{merchantId}/accounttax/{accountId} | 
*AccounttaxApi* | [**contentAccounttaxList**](docs/AccounttaxApi.md#contentAccounttaxList) | **GET** /{merchantId}/accounttax | 
*AccounttaxApi* | [**contentAccounttaxUpdate**](docs/AccounttaxApi.md#contentAccounttaxUpdate) | **PUT** /{merchantId}/accounttax/{accountId} | 
*BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsActivate**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsActivate) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/activate | 
*BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsGet**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsGet) | **GET** /{merchantId}/buyongoogleprograms/{regionCode} | 
*BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsOnboard**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsOnboard) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/onboard | 
*BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsPatch**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsPatch) | **PATCH** /{merchantId}/buyongoogleprograms/{regionCode} | 
*BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsPause**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsPause) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/pause | 
*BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsRequestreview**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsRequestreview) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/requestreview | 
*CollectionsApi* | [**contentCollectionsCreate**](docs/CollectionsApi.md#contentCollectionsCreate) | **POST** /{merchantId}/collections | 
*CollectionsApi* | [**contentCollectionsDelete**](docs/CollectionsApi.md#contentCollectionsDelete) | **DELETE** /{merchantId}/collections/{collectionId} | 
*CollectionsApi* | [**contentCollectionsGet**](docs/CollectionsApi.md#contentCollectionsGet) | **GET** /{merchantId}/collections/{collectionId} | 
*CollectionsApi* | [**contentCollectionsList**](docs/CollectionsApi.md#contentCollectionsList) | **GET** /{merchantId}/collections | 
*CollectionstatusesApi* | [**contentCollectionstatusesGet**](docs/CollectionstatusesApi.md#contentCollectionstatusesGet) | **GET** /{merchantId}/collectionstatuses/{collectionId} | 
*CollectionstatusesApi* | [**contentCollectionstatusesList**](docs/CollectionstatusesApi.md#contentCollectionstatusesList) | **GET** /{merchantId}/collectionstatuses | 
*ConversionsourcesApi* | [**contentConversionsourcesCreate**](docs/ConversionsourcesApi.md#contentConversionsourcesCreate) | **POST** /{merchantId}/conversionsources | 
*ConversionsourcesApi* | [**contentConversionsourcesDelete**](docs/ConversionsourcesApi.md#contentConversionsourcesDelete) | **DELETE** /{merchantId}/conversionsources/{conversionSourceId} | 
*ConversionsourcesApi* | [**contentConversionsourcesGet**](docs/ConversionsourcesApi.md#contentConversionsourcesGet) | **GET** /{merchantId}/conversionsources/{conversionSourceId} | 
*ConversionsourcesApi* | [**contentConversionsourcesList**](docs/ConversionsourcesApi.md#contentConversionsourcesList) | **GET** /{merchantId}/conversionsources | 
*ConversionsourcesApi* | [**contentConversionsourcesPatch**](docs/ConversionsourcesApi.md#contentConversionsourcesPatch) | **PATCH** /{merchantId}/conversionsources/{conversionSourceId} | 
*ConversionsourcesApi* | [**contentConversionsourcesUndelete**](docs/ConversionsourcesApi.md#contentConversionsourcesUndelete) | **POST** /{merchantId}/conversionsources/{conversionSourceId}:undelete | 
*CssesApi* | [**contentCssesGet**](docs/CssesApi.md#contentCssesGet) | **GET** /{cssGroupId}/csses/{cssDomainId} | 
*CssesApi* | [**contentCssesList**](docs/CssesApi.md#contentCssesList) | **GET** /{cssGroupId}/csses | 
*CssesApi* | [**contentCssesUpdatelabels**](docs/CssesApi.md#contentCssesUpdatelabels) | **POST** /{cssGroupId}/csses/{cssDomainId}/updatelabels | 
*DatafeedsApi* | [**contentDatafeedsCustombatch**](docs/DatafeedsApi.md#contentDatafeedsCustombatch) | **POST** /datafeeds/batch | 
*DatafeedsApi* | [**contentDatafeedsDelete**](docs/DatafeedsApi.md#contentDatafeedsDelete) | **DELETE** /{merchantId}/datafeeds/{datafeedId} | 
*DatafeedsApi* | [**contentDatafeedsFetchnow**](docs/DatafeedsApi.md#contentDatafeedsFetchnow) | **POST** /{merchantId}/datafeeds/{datafeedId}/fetchNow | 
*DatafeedsApi* | [**contentDatafeedsGet**](docs/DatafeedsApi.md#contentDatafeedsGet) | **GET** /{merchantId}/datafeeds/{datafeedId} | 
*DatafeedsApi* | [**contentDatafeedsInsert**](docs/DatafeedsApi.md#contentDatafeedsInsert) | **POST** /{merchantId}/datafeeds | 
*DatafeedsApi* | [**contentDatafeedsList**](docs/DatafeedsApi.md#contentDatafeedsList) | **GET** /{merchantId}/datafeeds | 
*DatafeedsApi* | [**contentDatafeedsUpdate**](docs/DatafeedsApi.md#contentDatafeedsUpdate) | **PUT** /{merchantId}/datafeeds/{datafeedId} | 
*DatafeedstatusesApi* | [**contentDatafeedstatusesCustombatch**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesCustombatch) | **POST** /datafeedstatuses/batch | 
*DatafeedstatusesApi* | [**contentDatafeedstatusesGet**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesGet) | **GET** /{merchantId}/datafeedstatuses/{datafeedId} | 
*DatafeedstatusesApi* | [**contentDatafeedstatusesList**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesList) | **GET** /{merchantId}/datafeedstatuses | 
*FreelistingsprogramApi* | [**contentFreelistingsprogramCheckoutsettingsDelete**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramCheckoutsettingsDelete) | **DELETE** /{merchantId}/freelistingsprogram/checkoutsettings | 
*FreelistingsprogramApi* | [**contentFreelistingsprogramCheckoutsettingsGet**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramCheckoutsettingsGet) | **GET** /{merchantId}/freelistingsprogram/checkoutsettings | 
*FreelistingsprogramApi* | [**contentFreelistingsprogramCheckoutsettingsInsert**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramCheckoutsettingsInsert) | **POST** /{merchantId}/freelistingsprogram/checkoutsettings | 
*FreelistingsprogramApi* | [**contentFreelistingsprogramGet**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramGet) | **GET** /{merchantId}/freelistingsprogram | 
*FreelistingsprogramApi* | [**contentFreelistingsprogramRequestreview**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramRequestreview) | **POST** /{merchantId}/freelistingsprogram/requestreview | 
*LiasettingsApi* | [**contentLiasettingsCustombatch**](docs/LiasettingsApi.md#contentLiasettingsCustombatch) | **POST** /liasettings/batch | 
*LiasettingsApi* | [**contentLiasettingsGet**](docs/LiasettingsApi.md#contentLiasettingsGet) | **GET** /{merchantId}/liasettings/{accountId} | 
*LiasettingsApi* | [**contentLiasettingsGetaccessiblegmbaccounts**](docs/LiasettingsApi.md#contentLiasettingsGetaccessiblegmbaccounts) | **GET** /{merchantId}/liasettings/{accountId}/accessiblegmbaccounts | 
*LiasettingsApi* | [**contentLiasettingsList**](docs/LiasettingsApi.md#contentLiasettingsList) | **GET** /{merchantId}/liasettings | 
*LiasettingsApi* | [**contentLiasettingsListposdataproviders**](docs/LiasettingsApi.md#contentLiasettingsListposdataproviders) | **GET** /liasettings/posdataproviders | 
*LiasettingsApi* | [**contentLiasettingsRequestgmbaccess**](docs/LiasettingsApi.md#contentLiasettingsRequestgmbaccess) | **POST** /{merchantId}/liasettings/{accountId}/requestgmbaccess | 
*LiasettingsApi* | [**contentLiasettingsRequestinventoryverification**](docs/LiasettingsApi.md#contentLiasettingsRequestinventoryverification) | **POST** /{merchantId}/liasettings/{accountId}/requestinventoryverification/{country} | 
*LiasettingsApi* | [**contentLiasettingsSetinventoryverificationcontact**](docs/LiasettingsApi.md#contentLiasettingsSetinventoryverificationcontact) | **POST** /{merchantId}/liasettings/{accountId}/setinventoryverificationcontact | 
*LiasettingsApi* | [**contentLiasettingsSetomnichannelexperience**](docs/LiasettingsApi.md#contentLiasettingsSetomnichannelexperience) | **POST** /{merchantId}/liasettings/{accountId}/setomnichannelexperience | 
*LiasettingsApi* | [**contentLiasettingsSetposdataprovider**](docs/LiasettingsApi.md#contentLiasettingsSetposdataprovider) | **POST** /{merchantId}/liasettings/{accountId}/setposdataprovider | 
*LiasettingsApi* | [**contentLiasettingsUpdate**](docs/LiasettingsApi.md#contentLiasettingsUpdate) | **PUT** /{merchantId}/liasettings/{accountId} | 
*LocalinventoryApi* | [**contentLocalinventoryCustombatch**](docs/LocalinventoryApi.md#contentLocalinventoryCustombatch) | **POST** /localinventory/batch | 
*LocalinventoryApi* | [**contentLocalinventoryInsert**](docs/LocalinventoryApi.md#contentLocalinventoryInsert) | **POST** /{merchantId}/products/{productId}/localinventory | 
*MerchantsupportApi* | [**contentMerchantsupportRenderaccountissues**](docs/MerchantsupportApi.md#contentMerchantsupportRenderaccountissues) | **POST** /{merchantId}/merchantsupport/renderaccountissues | 
*MerchantsupportApi* | [**contentMerchantsupportRenderproductissues**](docs/MerchantsupportApi.md#contentMerchantsupportRenderproductissues) | **POST** /{merchantId}/merchantsupport/renderproductissues/{productId} | 
*OrderinvoicesApi* | [**contentOrderinvoicesCreatechargeinvoice**](docs/OrderinvoicesApi.md#contentOrderinvoicesCreatechargeinvoice) | **POST** /{merchantId}/orderinvoices/{orderId}/createChargeInvoice | 
*OrderinvoicesApi* | [**contentOrderinvoicesCreaterefundinvoice**](docs/OrderinvoicesApi.md#contentOrderinvoicesCreaterefundinvoice) | **POST** /{merchantId}/orderinvoices/{orderId}/createRefundInvoice | 
*OrderreportsApi* | [**contentOrderreportsListdisbursements**](docs/OrderreportsApi.md#contentOrderreportsListdisbursements) | **GET** /{merchantId}/orderreports/disbursements | 
*OrderreportsApi* | [**contentOrderreportsListtransactions**](docs/OrderreportsApi.md#contentOrderreportsListtransactions) | **GET** /{merchantId}/orderreports/disbursements/{disbursementId}/transactions | 
*OrderreturnsApi* | [**contentOrderreturnsAcknowledge**](docs/OrderreturnsApi.md#contentOrderreturnsAcknowledge) | **POST** /{merchantId}/orderreturns/{returnId}/acknowledge | 
*OrderreturnsApi* | [**contentOrderreturnsCreateorderreturn**](docs/OrderreturnsApi.md#contentOrderreturnsCreateorderreturn) | **POST** /{merchantId}/orderreturns/createOrderReturn | 
*OrderreturnsApi* | [**contentOrderreturnsGet**](docs/OrderreturnsApi.md#contentOrderreturnsGet) | **GET** /{merchantId}/orderreturns/{returnId} | 
*OrderreturnsApi* | [**contentOrderreturnsLabelsCreate**](docs/OrderreturnsApi.md#contentOrderreturnsLabelsCreate) | **POST** /{merchantId}/orderreturns/{returnId}/labels | 
*OrderreturnsApi* | [**contentOrderreturnsList**](docs/OrderreturnsApi.md#contentOrderreturnsList) | **GET** /{merchantId}/orderreturns | 
*OrderreturnsApi* | [**contentOrderreturnsProcess**](docs/OrderreturnsApi.md#contentOrderreturnsProcess) | **POST** /{merchantId}/orderreturns/{returnId}/process | 
*OrdersApi* | [**contentOrdersAcknowledge**](docs/OrdersApi.md#contentOrdersAcknowledge) | **POST** /{merchantId}/orders/{orderId}/acknowledge | 
*OrdersApi* | [**contentOrdersAdvancetestorder**](docs/OrdersApi.md#contentOrdersAdvancetestorder) | **POST** /{merchantId}/testorders/{orderId}/advance | 
*OrdersApi* | [**contentOrdersCancel**](docs/OrdersApi.md#contentOrdersCancel) | **POST** /{merchantId}/orders/{orderId}/cancel | 
*OrdersApi* | [**contentOrdersCancellineitem**](docs/OrdersApi.md#contentOrdersCancellineitem) | **POST** /{merchantId}/orders/{orderId}/cancelLineItem | 
*OrdersApi* | [**contentOrdersCanceltestorderbycustomer**](docs/OrdersApi.md#contentOrdersCanceltestorderbycustomer) | **POST** /{merchantId}/testorders/{orderId}/cancelByCustomer | 
*OrdersApi* | [**contentOrdersCaptureOrder**](docs/OrdersApi.md#contentOrdersCaptureOrder) | **POST** /{merchantId}/orders/{orderId}/captureOrder | 
*OrdersApi* | [**contentOrdersCreatetestorder**](docs/OrdersApi.md#contentOrdersCreatetestorder) | **POST** /{merchantId}/testorders | 
*OrdersApi* | [**contentOrdersCreatetestreturn**](docs/OrdersApi.md#contentOrdersCreatetestreturn) | **POST** /{merchantId}/orders/{orderId}/testreturn | 
*OrdersApi* | [**contentOrdersGet**](docs/OrdersApi.md#contentOrdersGet) | **GET** /{merchantId}/orders/{orderId} | 
*OrdersApi* | [**contentOrdersGetbymerchantorderid**](docs/OrdersApi.md#contentOrdersGetbymerchantorderid) | **GET** /{merchantId}/ordersbymerchantid/{merchantOrderId} | 
*OrdersApi* | [**contentOrdersGettestordertemplate**](docs/OrdersApi.md#contentOrdersGettestordertemplate) | **GET** /{merchantId}/testordertemplates/{templateName} | 
*OrdersApi* | [**contentOrdersInstorerefundlineitem**](docs/OrdersApi.md#contentOrdersInstorerefundlineitem) | **POST** /{merchantId}/orders/{orderId}/inStoreRefundLineItem | 
*OrdersApi* | [**contentOrdersList**](docs/OrdersApi.md#contentOrdersList) | **GET** /{merchantId}/orders | 
*OrdersApi* | [**contentOrdersRefunditem**](docs/OrdersApi.md#contentOrdersRefunditem) | **POST** /{merchantId}/orders/{orderId}/refunditem | 
*OrdersApi* | [**contentOrdersRefundorder**](docs/OrdersApi.md#contentOrdersRefundorder) | **POST** /{merchantId}/orders/{orderId}/refundorder | 
*OrdersApi* | [**contentOrdersRejectreturnlineitem**](docs/OrdersApi.md#contentOrdersRejectreturnlineitem) | **POST** /{merchantId}/orders/{orderId}/rejectReturnLineItem | 
*OrdersApi* | [**contentOrdersReturnrefundlineitem**](docs/OrdersApi.md#contentOrdersReturnrefundlineitem) | **POST** /{merchantId}/orders/{orderId}/returnRefundLineItem | 
*OrdersApi* | [**contentOrdersSetlineitemmetadata**](docs/OrdersApi.md#contentOrdersSetlineitemmetadata) | **POST** /{merchantId}/orders/{orderId}/setLineItemMetadata | 
*OrdersApi* | [**contentOrdersShiplineitems**](docs/OrdersApi.md#contentOrdersShiplineitems) | **POST** /{merchantId}/orders/{orderId}/shipLineItems | 
*OrdersApi* | [**contentOrdersUpdatelineitemshippingdetails**](docs/OrdersApi.md#contentOrdersUpdatelineitemshippingdetails) | **POST** /{merchantId}/orders/{orderId}/updateLineItemShippingDetails | 
*OrdersApi* | [**contentOrdersUpdatemerchantorderid**](docs/OrdersApi.md#contentOrdersUpdatemerchantorderid) | **POST** /{merchantId}/orders/{orderId}/updateMerchantOrderId | 
*OrdersApi* | [**contentOrdersUpdateshipment**](docs/OrdersApi.md#contentOrdersUpdateshipment) | **POST** /{merchantId}/orders/{orderId}/updateShipment | 
*OrdertrackingsignalsApi* | [**contentOrdertrackingsignalsCreate**](docs/OrdertrackingsignalsApi.md#contentOrdertrackingsignalsCreate) | **POST** /{merchantId}/ordertrackingsignals | 
*PosApi* | [**contentPosCustombatch**](docs/PosApi.md#contentPosCustombatch) | **POST** /pos/batch | 
*PosApi* | [**contentPosDelete**](docs/PosApi.md#contentPosDelete) | **DELETE** /{merchantId}/pos/{targetMerchantId}/store/{storeCode} | 
*PosApi* | [**contentPosGet**](docs/PosApi.md#contentPosGet) | **GET** /{merchantId}/pos/{targetMerchantId}/store/{storeCode} | 
*PosApi* | [**contentPosInsert**](docs/PosApi.md#contentPosInsert) | **POST** /{merchantId}/pos/{targetMerchantId}/store | 
*PosApi* | [**contentPosInventory**](docs/PosApi.md#contentPosInventory) | **POST** /{merchantId}/pos/{targetMerchantId}/inventory | 
*PosApi* | [**contentPosList**](docs/PosApi.md#contentPosList) | **GET** /{merchantId}/pos/{targetMerchantId}/store | 
*PosApi* | [**contentPosSale**](docs/PosApi.md#contentPosSale) | **POST** /{merchantId}/pos/{targetMerchantId}/sale | 
*ProductdeliverytimeApi* | [**contentProductdeliverytimeCreate**](docs/ProductdeliverytimeApi.md#contentProductdeliverytimeCreate) | **POST** /{merchantId}/productdeliverytime | 
*ProductdeliverytimeApi* | [**contentProductdeliverytimeDelete**](docs/ProductdeliverytimeApi.md#contentProductdeliverytimeDelete) | **DELETE** /{merchantId}/productdeliverytime/{productId} | 
*ProductdeliverytimeApi* | [**contentProductdeliverytimeGet**](docs/ProductdeliverytimeApi.md#contentProductdeliverytimeGet) | **GET** /{merchantId}/productdeliverytime/{productId} | 
*ProductsApi* | [**contentProductsCustombatch**](docs/ProductsApi.md#contentProductsCustombatch) | **POST** /products/batch | 
*ProductsApi* | [**contentProductsDelete**](docs/ProductsApi.md#contentProductsDelete) | **DELETE** /{merchantId}/products/{productId} | 
*ProductsApi* | [**contentProductsGet**](docs/ProductsApi.md#contentProductsGet) | **GET** /{merchantId}/products/{productId} | 
*ProductsApi* | [**contentProductsInsert**](docs/ProductsApi.md#contentProductsInsert) | **POST** /{merchantId}/products | 
*ProductsApi* | [**contentProductsList**](docs/ProductsApi.md#contentProductsList) | **GET** /{merchantId}/products | 
*ProductsApi* | [**contentProductsUpdate**](docs/ProductsApi.md#contentProductsUpdate) | **PATCH** /{merchantId}/products/{productId} | 
*ProductstatusesApi* | [**contentProductstatusesCustombatch**](docs/ProductstatusesApi.md#contentProductstatusesCustombatch) | **POST** /productstatuses/batch | 
*ProductstatusesApi* | [**contentProductstatusesGet**](docs/ProductstatusesApi.md#contentProductstatusesGet) | **GET** /{merchantId}/productstatuses/{productId} | 
*ProductstatusesApi* | [**contentProductstatusesList**](docs/ProductstatusesApi.md#contentProductstatusesList) | **GET** /{merchantId}/productstatuses | 
*PromotionsApi* | [**contentPromotionsCreate**](docs/PromotionsApi.md#contentPromotionsCreate) | **POST** /{merchantId}/promotions | 
*PromotionsApi* | [**contentPromotionsGet**](docs/PromotionsApi.md#contentPromotionsGet) | **GET** /{merchantId}/promotions/{id} | 
*PromotionsApi* | [**contentPromotionsList**](docs/PromotionsApi.md#contentPromotionsList) | **GET** /{merchantId}/promotions | 
*PubsubnotificationsettingsApi* | [**contentPubsubnotificationsettingsGet**](docs/PubsubnotificationsettingsApi.md#contentPubsubnotificationsettingsGet) | **GET** /{merchantId}/pubsubnotificationsettings | 
*PubsubnotificationsettingsApi* | [**contentPubsubnotificationsettingsUpdate**](docs/PubsubnotificationsettingsApi.md#contentPubsubnotificationsettingsUpdate) | **PUT** /{merchantId}/pubsubnotificationsettings | 
*QuotasApi* | [**contentQuotasList**](docs/QuotasApi.md#contentQuotasList) | **GET** /{merchantId}/quotas | 
*RecommendationsApi* | [**contentRecommendationsGenerate**](docs/RecommendationsApi.md#contentRecommendationsGenerate) | **GET** /{merchantId}/recommendations/generate | 
*RecommendationsApi* | [**contentRecommendationsReportInteraction**](docs/RecommendationsApi.md#contentRecommendationsReportInteraction) | **POST** /{merchantId}/recommendations/reportInteraction | 
*RegionalinventoryApi* | [**contentRegionalinventoryCustombatch**](docs/RegionalinventoryApi.md#contentRegionalinventoryCustombatch) | **POST** /regionalinventory/batch | 
*RegionalinventoryApi* | [**contentRegionalinventoryInsert**](docs/RegionalinventoryApi.md#contentRegionalinventoryInsert) | **POST** /{merchantId}/products/{productId}/regionalinventory | 
*RegionsApi* | [**contentRegionsCreate**](docs/RegionsApi.md#contentRegionsCreate) | **POST** /{merchantId}/regions | 
*RegionsApi* | [**contentRegionsDelete**](docs/RegionsApi.md#contentRegionsDelete) | **DELETE** /{merchantId}/regions/{regionId} | 
*RegionsApi* | [**contentRegionsGet**](docs/RegionsApi.md#contentRegionsGet) | **GET** /{merchantId}/regions/{regionId} | 
*RegionsApi* | [**contentRegionsList**](docs/RegionsApi.md#contentRegionsList) | **GET** /{merchantId}/regions | 
*RegionsApi* | [**contentRegionsPatch**](docs/RegionsApi.md#contentRegionsPatch) | **PATCH** /{merchantId}/regions/{regionId} | 
*ReportsApi* | [**contentReportsSearch**](docs/ReportsApi.md#contentReportsSearch) | **POST** /{merchantId}/reports/search | 
*ReturnaddressApi* | [**contentReturnaddressCustombatch**](docs/ReturnaddressApi.md#contentReturnaddressCustombatch) | **POST** /returnaddress/batch | 
*ReturnaddressApi* | [**contentReturnaddressDelete**](docs/ReturnaddressApi.md#contentReturnaddressDelete) | **DELETE** /{merchantId}/returnaddress/{returnAddressId} | 
*ReturnaddressApi* | [**contentReturnaddressGet**](docs/ReturnaddressApi.md#contentReturnaddressGet) | **GET** /{merchantId}/returnaddress/{returnAddressId} | 
*ReturnaddressApi* | [**contentReturnaddressInsert**](docs/ReturnaddressApi.md#contentReturnaddressInsert) | **POST** /{merchantId}/returnaddress | 
*ReturnaddressApi* | [**contentReturnaddressList**](docs/ReturnaddressApi.md#contentReturnaddressList) | **GET** /{merchantId}/returnaddress | 
*ReturnpolicyApi* | [**contentReturnpolicyCustombatch**](docs/ReturnpolicyApi.md#contentReturnpolicyCustombatch) | **POST** /returnpolicy/batch | 
*ReturnpolicyApi* | [**contentReturnpolicyDelete**](docs/ReturnpolicyApi.md#contentReturnpolicyDelete) | **DELETE** /{merchantId}/returnpolicy/{returnPolicyId} | 
*ReturnpolicyApi* | [**contentReturnpolicyGet**](docs/ReturnpolicyApi.md#contentReturnpolicyGet) | **GET** /{merchantId}/returnpolicy/{returnPolicyId} | 
*ReturnpolicyApi* | [**contentReturnpolicyInsert**](docs/ReturnpolicyApi.md#contentReturnpolicyInsert) | **POST** /{merchantId}/returnpolicy | 
*ReturnpolicyApi* | [**contentReturnpolicyList**](docs/ReturnpolicyApi.md#contentReturnpolicyList) | **GET** /{merchantId}/returnpolicy | 
*ReturnpolicyonlineApi* | [**contentReturnpolicyonlineCreate**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineCreate) | **POST** /{merchantId}/returnpolicyonline | 
*ReturnpolicyonlineApi* | [**contentReturnpolicyonlineDelete**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineDelete) | **DELETE** /{merchantId}/returnpolicyonline/{returnPolicyId} | 
*ReturnpolicyonlineApi* | [**contentReturnpolicyonlineGet**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineGet) | **GET** /{merchantId}/returnpolicyonline/{returnPolicyId} | 
*ReturnpolicyonlineApi* | [**contentReturnpolicyonlineList**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineList) | **GET** /{merchantId}/returnpolicyonline | 
*ReturnpolicyonlineApi* | [**contentReturnpolicyonlinePatch**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlinePatch) | **PATCH** /{merchantId}/returnpolicyonline/{returnPolicyId} | 
*SettlementreportsApi* | [**contentSettlementreportsGet**](docs/SettlementreportsApi.md#contentSettlementreportsGet) | **GET** /{merchantId}/settlementreports/{settlementId} | 
*SettlementreportsApi* | [**contentSettlementreportsList**](docs/SettlementreportsApi.md#contentSettlementreportsList) | **GET** /{merchantId}/settlementreports | 
*SettlementtransactionsApi* | [**contentSettlementtransactionsList**](docs/SettlementtransactionsApi.md#contentSettlementtransactionsList) | **GET** /{merchantId}/settlementreports/{settlementId}/transactions | 
*ShippingsettingsApi* | [**contentShippingsettingsCustombatch**](docs/ShippingsettingsApi.md#contentShippingsettingsCustombatch) | **POST** /shippingsettings/batch | 
*ShippingsettingsApi* | [**contentShippingsettingsGet**](docs/ShippingsettingsApi.md#contentShippingsettingsGet) | **GET** /{merchantId}/shippingsettings/{accountId} | 
*ShippingsettingsApi* | [**contentShippingsettingsGetsupportedcarriers**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedcarriers) | **GET** /{merchantId}/supportedCarriers | 
*ShippingsettingsApi* | [**contentShippingsettingsGetsupportedholidays**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedholidays) | **GET** /{merchantId}/supportedHolidays | 
*ShippingsettingsApi* | [**contentShippingsettingsGetsupportedpickupservices**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedpickupservices) | **GET** /{merchantId}/supportedPickupServices | 
*ShippingsettingsApi* | [**contentShippingsettingsList**](docs/ShippingsettingsApi.md#contentShippingsettingsList) | **GET** /{merchantId}/shippingsettings | 
*ShippingsettingsApi* | [**contentShippingsettingsUpdate**](docs/ShippingsettingsApi.md#contentShippingsettingsUpdate) | **PUT** /{merchantId}/shippingsettings/{accountId} | 
*ShoppingadsprogramApi* | [**contentShoppingadsprogramGet**](docs/ShoppingadsprogramApi.md#contentShoppingadsprogramGet) | **GET** /{merchantId}/shoppingadsprogram | 
*ShoppingadsprogramApi* | [**contentShoppingadsprogramRequestreview**](docs/ShoppingadsprogramApi.md#contentShoppingadsprogramRequestreview) | **POST** /{merchantId}/shoppingadsprogram/requestreview | 


## Documentation for Models

 - [Account](docs/Account.md)
 - [AccountAddress](docs/AccountAddress.md)
 - [AccountAdsLink](docs/AccountAdsLink.md)
 - [AccountAutomaticImprovements](docs/AccountAutomaticImprovements.md)
 - [AccountBusinessIdentity](docs/AccountBusinessIdentity.md)
 - [AccountBusinessInformation](docs/AccountBusinessInformation.md)
 - [AccountConversionSettings](docs/AccountConversionSettings.md)
 - [AccountCredentials](docs/AccountCredentials.md)
 - [AccountCustomerService](docs/AccountCustomerService.md)
 - [AccountGoogleMyBusinessLink](docs/AccountGoogleMyBusinessLink.md)
 - [AccountIdentifier](docs/AccountIdentifier.md)
 - [AccountIdentityType](docs/AccountIdentityType.md)
 - [AccountImageImprovements](docs/AccountImageImprovements.md)
 - [AccountImageImprovementsSettings](docs/AccountImageImprovementsSettings.md)
 - [AccountIssue](docs/AccountIssue.md)
 - [AccountIssueImpact](docs/AccountIssueImpact.md)
 - [AccountItemUpdates](docs/AccountItemUpdates.md)
 - [AccountItemUpdatesSettings](docs/AccountItemUpdatesSettings.md)
 - [AccountLabel](docs/AccountLabel.md)
 - [AccountReturnCarrier](docs/AccountReturnCarrier.md)
 - [AccountShippingImprovements](docs/AccountShippingImprovements.md)
 - [AccountStatus](docs/AccountStatus.md)
 - [AccountStatusAccountLevelIssue](docs/AccountStatusAccountLevelIssue.md)
 - [AccountStatusItemLevelIssue](docs/AccountStatusItemLevelIssue.md)
 - [AccountStatusProducts](docs/AccountStatusProducts.md)
 - [AccountStatusStatistics](docs/AccountStatusStatistics.md)
 - [AccountTax](docs/AccountTax.md)
 - [AccountTaxTaxRule](docs/AccountTaxTaxRule.md)
 - [AccountUser](docs/AccountUser.md)
 - [AccountYouTubeChannelLink](docs/AccountYouTubeChannelLink.md)
 - [AccountsAuthInfoResponse](docs/AccountsAuthInfoResponse.md)
 - [AccountsClaimWebsiteResponse](docs/AccountsClaimWebsiteResponse.md)
 - [AccountsCustomBatchRequest](docs/AccountsCustomBatchRequest.md)
 - [AccountsCustomBatchRequestEntry](docs/AccountsCustomBatchRequestEntry.md)
 - [AccountsCustomBatchRequestEntryLinkRequest](docs/AccountsCustomBatchRequestEntryLinkRequest.md)
 - [AccountsCustomBatchResponse](docs/AccountsCustomBatchResponse.md)
 - [AccountsCustomBatchResponseEntry](docs/AccountsCustomBatchResponseEntry.md)
 - [AccountsLinkRequest](docs/AccountsLinkRequest.md)
 - [AccountsLinkResponse](docs/AccountsLinkResponse.md)
 - [AccountsListLinksResponse](docs/AccountsListLinksResponse.md)
 - [AccountsListResponse](docs/AccountsListResponse.md)
 - [AccountsUpdateLabelsRequest](docs/AccountsUpdateLabelsRequest.md)
 - [AccountsUpdateLabelsResponse](docs/AccountsUpdateLabelsResponse.md)
 - [AccountstatusesCustomBatchRequest](docs/AccountstatusesCustomBatchRequest.md)
 - [AccountstatusesCustomBatchRequestEntry](docs/AccountstatusesCustomBatchRequestEntry.md)
 - [AccountstatusesCustomBatchResponse](docs/AccountstatusesCustomBatchResponse.md)
 - [AccountstatusesCustomBatchResponseEntry](docs/AccountstatusesCustomBatchResponseEntry.md)
 - [AccountstatusesListResponse](docs/AccountstatusesListResponse.md)
 - [AccounttaxCustomBatchRequest](docs/AccounttaxCustomBatchRequest.md)
 - [AccounttaxCustomBatchRequestEntry](docs/AccounttaxCustomBatchRequestEntry.md)
 - [AccounttaxCustomBatchResponse](docs/AccounttaxCustomBatchResponse.md)
 - [AccounttaxCustomBatchResponseEntry](docs/AccounttaxCustomBatchResponseEntry.md)
 - [AccounttaxListResponse](docs/AccounttaxListResponse.md)
 - [Action](docs/Action.md)
 - [ActionReason](docs/ActionReason.md)
 - [Address](docs/Address.md)
 - [AlternateDisputeResolution](docs/AlternateDisputeResolution.md)
 - [Amount](docs/Amount.md)
 - [AttributionSettings](docs/AttributionSettings.md)
 - [AttributionSettingsConversionType](docs/AttributionSettingsConversionType.md)
 - [BestSellers](docs/BestSellers.md)
 - [Brand](docs/Brand.md)
 - [Breakdown](docs/Breakdown.md)
 - [BreakdownRegion](docs/BreakdownRegion.md)
 - [BuiltInSimpleAction](docs/BuiltInSimpleAction.md)
 - [BuiltInSimpleActionAdditionalContent](docs/BuiltInSimpleActionAdditionalContent.md)
 - [BusinessDayConfig](docs/BusinessDayConfig.md)
 - [BuyOnGoogleProgramStatus](docs/BuyOnGoogleProgramStatus.md)
 - [CaptureOrderResponse](docs/CaptureOrderResponse.md)
 - [CarrierRate](docs/CarrierRate.md)
 - [CarriersCarrier](docs/CarriersCarrier.md)
 - [CheckoutSettings](docs/CheckoutSettings.md)
 - [CloudExportAdditionalProperties](docs/CloudExportAdditionalProperties.md)
 - [Collection](docs/Collection.md)
 - [CollectionFeaturedProduct](docs/CollectionFeaturedProduct.md)
 - [CollectionStatus](docs/CollectionStatus.md)
 - [CollectionStatusDestinationStatus](docs/CollectionStatusDestinationStatus.md)
 - [CollectionStatusItemLevelIssue](docs/CollectionStatusItemLevelIssue.md)
 - [CompetitiveVisibility](docs/CompetitiveVisibility.md)
 - [ConversionSource](docs/ConversionSource.md)
 - [Css](docs/Css.md)
 - [CustomAttribute](docs/CustomAttribute.md)
 - [CustomerReturnReason](docs/CustomerReturnReason.md)
 - [CutoffTime](docs/CutoffTime.md)
 - [Datafeed](docs/Datafeed.md)
 - [DatafeedFetchSchedule](docs/DatafeedFetchSchedule.md)
 - [DatafeedFormat](docs/DatafeedFormat.md)
 - [DatafeedStatus](docs/DatafeedStatus.md)
 - [DatafeedStatusError](docs/DatafeedStatusError.md)
 - [DatafeedStatusExample](docs/DatafeedStatusExample.md)
 - [DatafeedTarget](docs/DatafeedTarget.md)
 - [DatafeedsCustomBatchRequest](docs/DatafeedsCustomBatchRequest.md)
 - [DatafeedsCustomBatchRequestEntry](docs/DatafeedsCustomBatchRequestEntry.md)
 - [DatafeedsCustomBatchResponse](docs/DatafeedsCustomBatchResponse.md)
 - [DatafeedsCustomBatchResponseEntry](docs/DatafeedsCustomBatchResponseEntry.md)
 - [DatafeedsFetchNowResponse](docs/DatafeedsFetchNowResponse.md)
 - [DatafeedsListResponse](docs/DatafeedsListResponse.md)
 - [DatafeedstatusesCustomBatchRequest](docs/DatafeedstatusesCustomBatchRequest.md)
 - [DatafeedstatusesCustomBatchRequestEntry](docs/DatafeedstatusesCustomBatchRequestEntry.md)
 - [DatafeedstatusesCustomBatchResponse](docs/DatafeedstatusesCustomBatchResponse.md)
 - [DatafeedstatusesCustomBatchResponseEntry](docs/DatafeedstatusesCustomBatchResponseEntry.md)
 - [DatafeedstatusesListResponse](docs/DatafeedstatusesListResponse.md)
 - [Date](docs/Date.md)
 - [DateTime](docs/DateTime.md)
 - [DeliveryArea](docs/DeliveryArea.md)
 - [DeliveryAreaPostalCodeRange](docs/DeliveryAreaPostalCodeRange.md)
 - [DeliveryTime](docs/DeliveryTime.md)
 - [Distance](docs/Distance.md)
 - [ECommercePlatformLinkInfo](docs/ECommercePlatformLinkInfo.md)
 - [Error](docs/Error.md)
 - [Errors](docs/Errors.md)
 - [ExternalAction](docs/ExternalAction.md)
 - [FreeListingsProgramStatus](docs/FreeListingsProgramStatus.md)
 - [FreeListingsProgramStatusRegionStatus](docs/FreeListingsProgramStatusRegionStatus.md)
 - [FreeListingsProgramStatusReviewIneligibilityReasonDetails](docs/FreeListingsProgramStatusReviewIneligibilityReasonDetails.md)
 - [GenerateRecommendationsResponse](docs/GenerateRecommendationsResponse.md)
 - [GmbAccounts](docs/GmbAccounts.md)
 - [GmbAccountsGmbAccount](docs/GmbAccountsGmbAccount.md)
 - [GoogleAnalyticsLink](docs/GoogleAnalyticsLink.md)
 - [Headers](docs/Headers.md)
 - [HolidayCutoff](docs/HolidayCutoff.md)
 - [HolidaysHoliday](docs/HolidaysHoliday.md)
 - [InsertCheckoutSettingsRequest](docs/InsertCheckoutSettingsRequest.md)
 - [Installment](docs/Installment.md)
 - [InvoiceSummary](docs/InvoiceSummary.md)
 - [InvoiceSummaryAdditionalChargeSummary](docs/InvoiceSummaryAdditionalChargeSummary.md)
 - [LabelIds](docs/LabelIds.md)
 - [LiaAboutPageSettings](docs/LiaAboutPageSettings.md)
 - [LiaCountrySettings](docs/LiaCountrySettings.md)
 - [LiaInventorySettings](docs/LiaInventorySettings.md)
 - [LiaOmnichannelExperience](docs/LiaOmnichannelExperience.md)
 - [LiaOnDisplayToOrderSettings](docs/LiaOnDisplayToOrderSettings.md)
 - [LiaPosDataProvider](docs/LiaPosDataProvider.md)
 - [LiaSettings](docs/LiaSettings.md)
 - [LiasettingsCustomBatchRequest](docs/LiasettingsCustomBatchRequest.md)
 - [LiasettingsCustomBatchRequestEntry](docs/LiasettingsCustomBatchRequestEntry.md)
 - [LiasettingsCustomBatchResponse](docs/LiasettingsCustomBatchResponse.md)
 - [LiasettingsCustomBatchResponseEntry](docs/LiasettingsCustomBatchResponseEntry.md)
 - [LiasettingsGetAccessibleGmbAccountsResponse](docs/LiasettingsGetAccessibleGmbAccountsResponse.md)
 - [LiasettingsListPosDataProvidersResponse](docs/LiasettingsListPosDataProvidersResponse.md)
 - [LiasettingsListResponse](docs/LiasettingsListResponse.md)
 - [LiasettingsRequestGmbAccessResponse](docs/LiasettingsRequestGmbAccessResponse.md)
 - [LiasettingsRequestInventoryVerificationResponse](docs/LiasettingsRequestInventoryVerificationResponse.md)
 - [LiasettingsSetInventoryVerificationContactResponse](docs/LiasettingsSetInventoryVerificationContactResponse.md)
 - [LiasettingsSetPosDataProviderResponse](docs/LiasettingsSetPosDataProviderResponse.md)
 - [LinkService](docs/LinkService.md)
 - [LinkedAccount](docs/LinkedAccount.md)
 - [ListAccountLabelsResponse](docs/ListAccountLabelsResponse.md)
 - [ListAccountReturnCarrierResponse](docs/ListAccountReturnCarrierResponse.md)
 - [ListCollectionStatusesResponse](docs/ListCollectionStatusesResponse.md)
 - [ListCollectionsResponse](docs/ListCollectionsResponse.md)
 - [ListConversionSourcesResponse](docs/ListConversionSourcesResponse.md)
 - [ListCssesResponse](docs/ListCssesResponse.md)
 - [ListMethodQuotasResponse](docs/ListMethodQuotasResponse.md)
 - [ListPromotionResponse](docs/ListPromotionResponse.md)
 - [ListRegionsResponse](docs/ListRegionsResponse.md)
 - [ListReturnPolicyOnlineResponse](docs/ListReturnPolicyOnlineResponse.md)
 - [LocalInventory](docs/LocalInventory.md)
 - [LocalinventoryCustomBatchRequest](docs/LocalinventoryCustomBatchRequest.md)
 - [LocalinventoryCustomBatchRequestEntry](docs/LocalinventoryCustomBatchRequestEntry.md)
 - [LocalinventoryCustomBatchResponse](docs/LocalinventoryCustomBatchResponse.md)
 - [LocalinventoryCustomBatchResponseEntry](docs/LocalinventoryCustomBatchResponseEntry.md)
 - [LocationIdSet](docs/LocationIdSet.md)
 - [LoyaltyPoints](docs/LoyaltyPoints.md)
 - [MerchantCenterDestination](docs/MerchantCenterDestination.md)
 - [MerchantOrderReturn](docs/MerchantOrderReturn.md)
 - [MerchantOrderReturnItem](docs/MerchantOrderReturnItem.md)
 - [MerchantRejectionReason](docs/MerchantRejectionReason.md)
 - [MethodQuota](docs/MethodQuota.md)
 - [Metrics](docs/Metrics.md)
 - [MinimumOrderValueTable](docs/MinimumOrderValueTable.md)
 - [MinimumOrderValueTableStoreCodeSetWithMov](docs/MinimumOrderValueTableStoreCodeSetWithMov.md)
 - [MonetaryAmount](docs/MonetaryAmount.md)
 - [OnboardBuyOnGoogleProgramRequest](docs/OnboardBuyOnGoogleProgramRequest.md)
 - [Order](docs/Order.md)
 - [OrderAddress](docs/OrderAddress.md)
 - [OrderCancellation](docs/OrderCancellation.md)
 - [OrderCustomer](docs/OrderCustomer.md)
 - [OrderCustomerLoyaltyInfo](docs/OrderCustomerLoyaltyInfo.md)
 - [OrderCustomerMarketingRightsInfo](docs/OrderCustomerMarketingRightsInfo.md)
 - [OrderDeliveryDetails](docs/OrderDeliveryDetails.md)
 - [OrderLineItem](docs/OrderLineItem.md)
 - [OrderLineItemAdjustment](docs/OrderLineItemAdjustment.md)
 - [OrderLineItemProduct](docs/OrderLineItemProduct.md)
 - [OrderLineItemProductFee](docs/OrderLineItemProductFee.md)
 - [OrderLineItemProductVariantAttribute](docs/OrderLineItemProductVariantAttribute.md)
 - [OrderLineItemReturnInfo](docs/OrderLineItemReturnInfo.md)
 - [OrderLineItemShippingDetails](docs/OrderLineItemShippingDetails.md)
 - [OrderLineItemShippingDetailsMethod](docs/OrderLineItemShippingDetailsMethod.md)
 - [OrderMerchantProvidedAnnotation](docs/OrderMerchantProvidedAnnotation.md)
 - [OrderOrderAnnotation](docs/OrderOrderAnnotation.md)
 - [OrderPickupDetails](docs/OrderPickupDetails.md)
 - [OrderPickupDetailsCollector](docs/OrderPickupDetailsCollector.md)
 - [OrderPromotion](docs/OrderPromotion.md)
 - [OrderPromotionItem](docs/OrderPromotionItem.md)
 - [OrderRefund](docs/OrderRefund.md)
 - [OrderReportDisbursement](docs/OrderReportDisbursement.md)
 - [OrderReportTransaction](docs/OrderReportTransaction.md)
 - [OrderReturn](docs/OrderReturn.md)
 - [OrderShipment](docs/OrderShipment.md)
 - [OrderShipmentLineItemShipment](docs/OrderShipmentLineItemShipment.md)
 - [OrderShipmentScheduledDeliveryDetails](docs/OrderShipmentScheduledDeliveryDetails.md)
 - [OrderTrackingSignal](docs/OrderTrackingSignal.md)
 - [OrderTrackingSignalLineItemDetails](docs/OrderTrackingSignalLineItemDetails.md)
 - [OrderTrackingSignalShipmentLineItemMapping](docs/OrderTrackingSignalShipmentLineItemMapping.md)
 - [OrderTrackingSignalShippingInfo](docs/OrderTrackingSignalShippingInfo.md)
 - [OrderinvoicesCreateChargeInvoiceRequest](docs/OrderinvoicesCreateChargeInvoiceRequest.md)
 - [OrderinvoicesCreateChargeInvoiceResponse](docs/OrderinvoicesCreateChargeInvoiceResponse.md)
 - [OrderinvoicesCreateRefundInvoiceRequest](docs/OrderinvoicesCreateRefundInvoiceRequest.md)
 - [OrderinvoicesCreateRefundInvoiceResponse](docs/OrderinvoicesCreateRefundInvoiceResponse.md)
 - [OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceRefundOption](docs/OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceRefundOption.md)
 - [OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceReturnOption](docs/OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceReturnOption.md)
 - [OrderreportsListDisbursementsResponse](docs/OrderreportsListDisbursementsResponse.md)
 - [OrderreportsListTransactionsResponse](docs/OrderreportsListTransactionsResponse.md)
 - [OrderreturnsAcknowledgeRequest](docs/OrderreturnsAcknowledgeRequest.md)
 - [OrderreturnsAcknowledgeResponse](docs/OrderreturnsAcknowledgeResponse.md)
 - [OrderreturnsCreateOrderReturnRequest](docs/OrderreturnsCreateOrderReturnRequest.md)
 - [OrderreturnsCreateOrderReturnResponse](docs/OrderreturnsCreateOrderReturnResponse.md)
 - [OrderreturnsLineItem](docs/OrderreturnsLineItem.md)
 - [OrderreturnsListResponse](docs/OrderreturnsListResponse.md)
 - [OrderreturnsPartialRefund](docs/OrderreturnsPartialRefund.md)
 - [OrderreturnsProcessRequest](docs/OrderreturnsProcessRequest.md)
 - [OrderreturnsProcessResponse](docs/OrderreturnsProcessResponse.md)
 - [OrderreturnsRefundOperation](docs/OrderreturnsRefundOperation.md)
 - [OrderreturnsRejectOperation](docs/OrderreturnsRejectOperation.md)
 - [OrderreturnsReturnItem](docs/OrderreturnsReturnItem.md)
 - [OrdersAcknowledgeRequest](docs/OrdersAcknowledgeRequest.md)
 - [OrdersAcknowledgeResponse](docs/OrdersAcknowledgeResponse.md)
 - [OrdersAdvanceTestOrderResponse](docs/OrdersAdvanceTestOrderResponse.md)
 - [OrdersCancelLineItemRequest](docs/OrdersCancelLineItemRequest.md)
 - [OrdersCancelLineItemResponse](docs/OrdersCancelLineItemResponse.md)
 - [OrdersCancelRequest](docs/OrdersCancelRequest.md)
 - [OrdersCancelResponse](docs/OrdersCancelResponse.md)
 - [OrdersCancelTestOrderByCustomerRequest](docs/OrdersCancelTestOrderByCustomerRequest.md)
 - [OrdersCancelTestOrderByCustomerResponse](docs/OrdersCancelTestOrderByCustomerResponse.md)
 - [OrdersCreateTestOrderRequest](docs/OrdersCreateTestOrderRequest.md)
 - [OrdersCreateTestOrderResponse](docs/OrdersCreateTestOrderResponse.md)
 - [OrdersCreateTestReturnRequest](docs/OrdersCreateTestReturnRequest.md)
 - [OrdersCreateTestReturnResponse](docs/OrdersCreateTestReturnResponse.md)
 - [OrdersCustomBatchRequestEntryCreateTestReturnReturnItem](docs/OrdersCustomBatchRequestEntryCreateTestReturnReturnItem.md)
 - [OrdersCustomBatchRequestEntryRefundItemItem](docs/OrdersCustomBatchRequestEntryRefundItemItem.md)
 - [OrdersCustomBatchRequestEntryRefundItemShipping](docs/OrdersCustomBatchRequestEntryRefundItemShipping.md)
 - [OrdersCustomBatchRequestEntryShipLineItemsShipmentInfo](docs/OrdersCustomBatchRequestEntryShipLineItemsShipmentInfo.md)
 - [OrdersCustomBatchRequestEntryUpdateShipmentScheduledDeliveryDetails](docs/OrdersCustomBatchRequestEntryUpdateShipmentScheduledDeliveryDetails.md)
 - [OrdersGetByMerchantOrderIdResponse](docs/OrdersGetByMerchantOrderIdResponse.md)
 - [OrdersGetTestOrderTemplateResponse](docs/OrdersGetTestOrderTemplateResponse.md)
 - [OrdersInStoreRefundLineItemRequest](docs/OrdersInStoreRefundLineItemRequest.md)
 - [OrdersInStoreRefundLineItemResponse](docs/OrdersInStoreRefundLineItemResponse.md)
 - [OrdersListResponse](docs/OrdersListResponse.md)
 - [OrdersRefundItemRequest](docs/OrdersRefundItemRequest.md)
 - [OrdersRefundItemResponse](docs/OrdersRefundItemResponse.md)
 - [OrdersRefundOrderRequest](docs/OrdersRefundOrderRequest.md)
 - [OrdersRefundOrderResponse](docs/OrdersRefundOrderResponse.md)
 - [OrdersRejectReturnLineItemRequest](docs/OrdersRejectReturnLineItemRequest.md)
 - [OrdersRejectReturnLineItemResponse](docs/OrdersRejectReturnLineItemResponse.md)
 - [OrdersReturnRefundLineItemRequest](docs/OrdersReturnRefundLineItemRequest.md)
 - [OrdersReturnRefundLineItemResponse](docs/OrdersReturnRefundLineItemResponse.md)
 - [OrdersSetLineItemMetadataRequest](docs/OrdersSetLineItemMetadataRequest.md)
 - [OrdersSetLineItemMetadataResponse](docs/OrdersSetLineItemMetadataResponse.md)
 - [OrdersShipLineItemsRequest](docs/OrdersShipLineItemsRequest.md)
 - [OrdersShipLineItemsResponse](docs/OrdersShipLineItemsResponse.md)
 - [OrdersUpdateLineItemShippingDetailsRequest](docs/OrdersUpdateLineItemShippingDetailsRequest.md)
 - [OrdersUpdateLineItemShippingDetailsResponse](docs/OrdersUpdateLineItemShippingDetailsResponse.md)
 - [OrdersUpdateMerchantOrderIdRequest](docs/OrdersUpdateMerchantOrderIdRequest.md)
 - [OrdersUpdateMerchantOrderIdResponse](docs/OrdersUpdateMerchantOrderIdResponse.md)
 - [OrdersUpdateShipmentRequest](docs/OrdersUpdateShipmentRequest.md)
 - [OrdersUpdateShipmentResponse](docs/OrdersUpdateShipmentResponse.md)
 - [PaymentServiceProviderLinkInfo](docs/PaymentServiceProviderLinkInfo.md)
 - [PickupCarrierService](docs/PickupCarrierService.md)
 - [PickupServicesPickupService](docs/PickupServicesPickupService.md)
 - [PosCustomBatchRequest](docs/PosCustomBatchRequest.md)
 - [PosCustomBatchRequestEntry](docs/PosCustomBatchRequestEntry.md)
 - [PosCustomBatchResponse](docs/PosCustomBatchResponse.md)
 - [PosCustomBatchResponseEntry](docs/PosCustomBatchResponseEntry.md)
 - [PosDataProviders](docs/PosDataProviders.md)
 - [PosDataProvidersPosDataProvider](docs/PosDataProvidersPosDataProvider.md)
 - [PosInventory](docs/PosInventory.md)
 - [PosInventoryRequest](docs/PosInventoryRequest.md)
 - [PosInventoryResponse](docs/PosInventoryResponse.md)
 - [PosListResponse](docs/PosListResponse.md)
 - [PosSale](docs/PosSale.md)
 - [PosSaleRequest](docs/PosSaleRequest.md)
 - [PosSaleResponse](docs/PosSaleResponse.md)
 - [PosStore](docs/PosStore.md)
 - [PostalCodeGroup](docs/PostalCodeGroup.md)
 - [PostalCodeRange](docs/PostalCodeRange.md)
 - [Price](docs/Price.md)
 - [PriceAmount](docs/PriceAmount.md)
 - [PriceCompetitiveness](docs/PriceCompetitiveness.md)
 - [PriceInsights](docs/PriceInsights.md)
 - [Product](docs/Product.md)
 - [ProductAmount](docs/ProductAmount.md)
 - [ProductCertification](docs/ProductCertification.md)
 - [ProductCluster](docs/ProductCluster.md)
 - [ProductDeliveryTime](docs/ProductDeliveryTime.md)
 - [ProductDeliveryTimeAreaDeliveryTime](docs/ProductDeliveryTimeAreaDeliveryTime.md)
 - [ProductDeliveryTimeAreaDeliveryTimeDeliveryTime](docs/ProductDeliveryTimeAreaDeliveryTimeDeliveryTime.md)
 - [ProductDimension](docs/ProductDimension.md)
 - [ProductId](docs/ProductId.md)
 - [ProductIssue](docs/ProductIssue.md)
 - [ProductIssueImpact](docs/ProductIssueImpact.md)
 - [ProductProductDetail](docs/ProductProductDetail.md)
 - [ProductShipping](docs/ProductShipping.md)
 - [ProductShippingDimension](docs/ProductShippingDimension.md)
 - [ProductShippingWeight](docs/ProductShippingWeight.md)
 - [ProductStatus](docs/ProductStatus.md)
 - [ProductStatusDestinationStatus](docs/ProductStatusDestinationStatus.md)
 - [ProductStatusItemLevelIssue](docs/ProductStatusItemLevelIssue.md)
 - [ProductSubscriptionCost](docs/ProductSubscriptionCost.md)
 - [ProductTax](docs/ProductTax.md)
 - [ProductUnitPricingBaseMeasure](docs/ProductUnitPricingBaseMeasure.md)
 - [ProductUnitPricingMeasure](docs/ProductUnitPricingMeasure.md)
 - [ProductView](docs/ProductView.md)
 - [ProductViewItemIssue](docs/ProductViewItemIssue.md)
 - [ProductViewItemIssueIssueSeverityPerDestination](docs/ProductViewItemIssueIssueSeverityPerDestination.md)
 - [ProductViewItemIssueItemIssueSeverity](docs/ProductViewItemIssueItemIssueSeverity.md)
 - [ProductViewItemIssueItemIssueType](docs/ProductViewItemIssueItemIssueType.md)
 - [ProductWeight](docs/ProductWeight.md)
 - [ProductsCustomBatchRequest](docs/ProductsCustomBatchRequest.md)
 - [ProductsCustomBatchRequestEntry](docs/ProductsCustomBatchRequestEntry.md)
 - [ProductsCustomBatchResponse](docs/ProductsCustomBatchResponse.md)
 - [ProductsCustomBatchResponseEntry](docs/ProductsCustomBatchResponseEntry.md)
 - [ProductsListResponse](docs/ProductsListResponse.md)
 - [ProductstatusesCustomBatchRequest](docs/ProductstatusesCustomBatchRequest.md)
 - [ProductstatusesCustomBatchRequestEntry](docs/ProductstatusesCustomBatchRequestEntry.md)
 - [ProductstatusesCustomBatchResponse](docs/ProductstatusesCustomBatchResponse.md)
 - [ProductstatusesCustomBatchResponseEntry](docs/ProductstatusesCustomBatchResponseEntry.md)
 - [ProductstatusesListResponse](docs/ProductstatusesListResponse.md)
 - [Promotion](docs/Promotion.md)
 - [PromotionPromotionStatus](docs/PromotionPromotionStatus.md)
 - [PromotionPromotionStatusDestinationStatus](docs/PromotionPromotionStatusDestinationStatus.md)
 - [PromotionPromotionStatusPromotionIssue](docs/PromotionPromotionStatusPromotionIssue.md)
 - [PubsubNotificationSettings](docs/PubsubNotificationSettings.md)
 - [RateGroup](docs/RateGroup.md)
 - [Recommendation](docs/Recommendation.md)
 - [RecommendationCallToAction](docs/RecommendationCallToAction.md)
 - [RecommendationCreative](docs/RecommendationCreative.md)
 - [RecommendationDescription](docs/RecommendationDescription.md)
 - [RefundReason](docs/RefundReason.md)
 - [Region](docs/Region.md)
 - [RegionGeoTargetArea](docs/RegionGeoTargetArea.md)
 - [RegionPostalCodeArea](docs/RegionPostalCodeArea.md)
 - [RegionPostalCodeAreaPostalCodeRange](docs/RegionPostalCodeAreaPostalCodeRange.md)
 - [RegionalInventory](docs/RegionalInventory.md)
 - [RegionalinventoryCustomBatchRequest](docs/RegionalinventoryCustomBatchRequest.md)
 - [RegionalinventoryCustomBatchRequestEntry](docs/RegionalinventoryCustomBatchRequestEntry.md)
 - [RegionalinventoryCustomBatchResponse](docs/RegionalinventoryCustomBatchResponse.md)
 - [RegionalinventoryCustomBatchResponseEntry](docs/RegionalinventoryCustomBatchResponseEntry.md)
 - [RenderAccountIssuesRequestPayload](docs/RenderAccountIssuesRequestPayload.md)
 - [RenderAccountIssuesResponse](docs/RenderAccountIssuesResponse.md)
 - [RenderProductIssuesRequestPayload](docs/RenderProductIssuesRequestPayload.md)
 - [RenderProductIssuesResponse](docs/RenderProductIssuesResponse.md)
 - [ReportInteractionRequest](docs/ReportInteractionRequest.md)
 - [ReportRow](docs/ReportRow.md)
 - [RequestPhoneVerificationRequest](docs/RequestPhoneVerificationRequest.md)
 - [RequestPhoneVerificationResponse](docs/RequestPhoneVerificationResponse.md)
 - [RequestReviewFreeListingsRequest](docs/RequestReviewFreeListingsRequest.md)
 - [RequestReviewShoppingAdsRequest](docs/RequestReviewShoppingAdsRequest.md)
 - [ReturnAddress](docs/ReturnAddress.md)
 - [ReturnAddressAddress](docs/ReturnAddressAddress.md)
 - [ReturnPolicy](docs/ReturnPolicy.md)
 - [ReturnPolicyOnline](docs/ReturnPolicyOnline.md)
 - [ReturnPolicyOnlinePolicy](docs/ReturnPolicyOnlinePolicy.md)
 - [ReturnPolicyOnlineRestockingFee](docs/ReturnPolicyOnlineRestockingFee.md)
 - [ReturnPolicyOnlineReturnReasonCategoryInfo](docs/ReturnPolicyOnlineReturnReasonCategoryInfo.md)
 - [ReturnPolicyOnlineReturnShippingFee](docs/ReturnPolicyOnlineReturnShippingFee.md)
 - [ReturnPolicyPolicy](docs/ReturnPolicyPolicy.md)
 - [ReturnPolicySeasonalOverride](docs/ReturnPolicySeasonalOverride.md)
 - [ReturnPricingInfo](docs/ReturnPricingInfo.md)
 - [ReturnShipment](docs/ReturnShipment.md)
 - [ReturnShippingLabel](docs/ReturnShippingLabel.md)
 - [ReturnaddressCustomBatchRequest](docs/ReturnaddressCustomBatchRequest.md)
 - [ReturnaddressCustomBatchRequestEntry](docs/ReturnaddressCustomBatchRequestEntry.md)
 - [ReturnaddressCustomBatchResponse](docs/ReturnaddressCustomBatchResponse.md)
 - [ReturnaddressCustomBatchResponseEntry](docs/ReturnaddressCustomBatchResponseEntry.md)
 - [ReturnaddressListResponse](docs/ReturnaddressListResponse.md)
 - [ReturnpolicyCustomBatchRequest](docs/ReturnpolicyCustomBatchRequest.md)
 - [ReturnpolicyCustomBatchRequestEntry](docs/ReturnpolicyCustomBatchRequestEntry.md)
 - [ReturnpolicyCustomBatchResponse](docs/ReturnpolicyCustomBatchResponse.md)
 - [ReturnpolicyCustomBatchResponseEntry](docs/ReturnpolicyCustomBatchResponseEntry.md)
 - [ReturnpolicyListResponse](docs/ReturnpolicyListResponse.md)
 - [Row](docs/Row.md)
 - [SearchRequest](docs/SearchRequest.md)
 - [SearchResponse](docs/SearchResponse.md)
 - [Segments](docs/Segments.md)
 - [Service](docs/Service.md)
 - [ServiceStoreConfig](docs/ServiceStoreConfig.md)
 - [ServiceStoreConfigCutoffConfig](docs/ServiceStoreConfigCutoffConfig.md)
 - [ServiceStoreConfigCutoffConfigLocalCutoffTime](docs/ServiceStoreConfigCutoffConfigLocalCutoffTime.md)
 - [SettlementReport](docs/SettlementReport.md)
 - [SettlementTransaction](docs/SettlementTransaction.md)
 - [SettlementTransactionAmount](docs/SettlementTransactionAmount.md)
 - [SettlementTransactionAmountCommission](docs/SettlementTransactionAmountCommission.md)
 - [SettlementTransactionIdentifiers](docs/SettlementTransactionIdentifiers.md)
 - [SettlementTransactionTransaction](docs/SettlementTransactionTransaction.md)
 - [SettlementreportsListResponse](docs/SettlementreportsListResponse.md)
 - [SettlementtransactionsListResponse](docs/SettlementtransactionsListResponse.md)
 - [ShipmentInvoice](docs/ShipmentInvoice.md)
 - [ShipmentInvoiceLineItemInvoice](docs/ShipmentInvoiceLineItemInvoice.md)
 - [ShipmentTrackingInfo](docs/ShipmentTrackingInfo.md)
 - [ShippingSettings](docs/ShippingSettings.md)
 - [ShippingsettingsCustomBatchRequest](docs/ShippingsettingsCustomBatchRequest.md)
 - [ShippingsettingsCustomBatchRequestEntry](docs/ShippingsettingsCustomBatchRequestEntry.md)
 - [ShippingsettingsCustomBatchResponse](docs/ShippingsettingsCustomBatchResponse.md)
 - [ShippingsettingsCustomBatchResponseEntry](docs/ShippingsettingsCustomBatchResponseEntry.md)
 - [ShippingsettingsGetSupportedCarriersResponse](docs/ShippingsettingsGetSupportedCarriersResponse.md)
 - [ShippingsettingsGetSupportedHolidaysResponse](docs/ShippingsettingsGetSupportedHolidaysResponse.md)
 - [ShippingsettingsGetSupportedPickupServicesResponse](docs/ShippingsettingsGetSupportedPickupServicesResponse.md)
 - [ShippingsettingsListResponse](docs/ShippingsettingsListResponse.md)
 - [ShoppingAdsProgramStatus](docs/ShoppingAdsProgramStatus.md)
 - [ShoppingAdsProgramStatusRegionStatus](docs/ShoppingAdsProgramStatusRegionStatus.md)
 - [ShoppingAdsProgramStatusReviewIneligibilityReasonDetails](docs/ShoppingAdsProgramStatusReviewIneligibilityReasonDetails.md)
 - [Table](docs/Table.md)
 - [TestOrder](docs/TestOrder.md)
 - [TestOrderAddress](docs/TestOrderAddress.md)
 - [TestOrderDeliveryDetails](docs/TestOrderDeliveryDetails.md)
 - [TestOrderLineItem](docs/TestOrderLineItem.md)
 - [TestOrderLineItemProduct](docs/TestOrderLineItemProduct.md)
 - [TestOrderPickupDetails](docs/TestOrderPickupDetails.md)
 - [TestOrderPickupDetailsPickupPerson](docs/TestOrderPickupDetailsPickupPerson.md)
 - [TimePeriod](docs/TimePeriod.md)
 - [TimeZone](docs/TimeZone.md)
 - [TransitTable](docs/TransitTable.md)
 - [TransitTableTransitTimeRow](docs/TransitTableTransitTimeRow.md)
 - [TransitTableTransitTimeRowTransitTimeValue](docs/TransitTableTransitTimeRowTransitTimeValue.md)
 - [UnitInvoice](docs/UnitInvoice.md)
 - [UnitInvoiceAdditionalCharge](docs/UnitInvoiceAdditionalCharge.md)
 - [UnitInvoiceTaxLine](docs/UnitInvoiceTaxLine.md)
 - [UrlSettings](docs/UrlSettings.md)
 - [Value](docs/Value.md)
 - [VerifyPhoneNumberRequest](docs/VerifyPhoneNumberRequest.md)
 - [VerifyPhoneNumberResponse](docs/VerifyPhoneNumberResponse.md)
 - [Warehouse](docs/Warehouse.md)
 - [WarehouseBasedDeliveryTime](docs/WarehouseBasedDeliveryTime.md)
 - [WarehouseCutoffTime](docs/WarehouseCutoffTime.md)
 - [Weight](docs/Weight.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/content: Manage your product listings and accounts for Google Shopping

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/content: Manage your product listings and accounts for Google Shopping


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



